New Crowdin updates (#2)
* New translations en.json (Romanian)

* New translations en.json (French)

* New translations en.json (Spanish)

* New translations en.json (Belarusian)

* New translations en.json (German)

* New translations en.json (Greek)

* New translations en.json (Hebrew)

* New translations en.json (Italian)

* New translations en.json (Japanese)

* New translations en.json (Korean)

* New translations en.json (Dutch)

* New translations en.json (Norwegian)

* New translations en.json (Polish)

* New translations en.json (Russian)

* New translations en.json (Swedish)

* New translations en.json (Turkish)

* New translations en.json (Ukrainian)

* New translations en.json (Thai)

* New translations en.json (Esperanto)

* New translations en.json (Spanish, Latin America)

* New translations en.json (Chinese)

* New translations en.json (Portuguese - KG)

* New translations en.json (Old French)

* New translations en.json (Chinese Traditional - KG)

* New translations en.json (Czech - KG)

* New translations en.json (Toki Pona)

* New translations en.json (Karakalpak)

* New translations en.json (Romanian)

* New translations en.json (French)

* New translations en.json (Spanish)

* New translations en.json (Belarusian)

* New translations en.json (German)

* New translations en.json (Greek)

* New translations en.json (Hebrew)

* New translations en.json (Italian)

* New translations en.json (Japanese)

* New translations en.json (Korean)

* New translations en.json (Dutch)

* New translations en.json (Norwegian)

* New translations en.json (Polish)

* New translations en.json (Russian)

* New translations en.json (Swedish)

* New translations en.json (Turkish)

* New translations en.json (Ukrainian)

* New translations en.json (Thai)

* New translations en.json (Esperanto)

* New translations en.json (Spanish, Latin America)

* New translations en.json (Chi

--- a/res/i18n/crowdin/br.json
+++ b/res/i18n/crowdin/br.json
@@ -4,7 +4,6 @@
     "achievements.header": "Conquistas: {0} of {1}",
     "achievements.msg.unlock": "Conquista ganha: {0}!",
     "achievements.msg.starUnlock": "Conquista estrela ganha: {0}!",
-    "achievements.anachronox.title": "Anachronox",
     "achievements.anachronox.desc": "Por favor, pare.",
     "achievements.atlasUnmeowed.title": "Atlas Desenmiado",
     "achievements.atlasUnmeowed.desc": "Construa um Magneto no modo Vontade de Ferro",
@@ -28,6 +27,7 @@
     "achievements.lotusMachine.desc": "Quebre o ciclo de reincarnações",
     "achievements.meowMeowRevolution.title": "Revolução Miau Miau",
     "achievements.meowMeowRevolution.desc": "Construa uma fabrica no modo Vontade de Ferro",
+    "achievements.panel.label": "Conquistas",
     "achievements.serenity.title": "Serenidade",
     "achievements.serenity.desc": "Tenha 50 gatos sem perder nenhum deles",
     "achievements.shadowOfTheColossus.title": "Sombra do Colosso",
@@ -47,7 +47,6 @@
     "achievements.systemShock.desc": "Desculpa Dave, temo que não posso fazer isso.",
     "achievements.theElderLegacy.title": "Legado do Ancião",
     "achievements.theElderLegacy.desc": "Seja um dos primeiros a testar Kittens Game em seu celular",
-    "achievements.uberkatzhen.title": "Uberkatzchen",
     "achievements.uberkatzhen.desc": "O que não mata fortalece",
     "achievements.uniception.title": "Uninício",
     "achievements.uniception.desc": "Encontre a conspiração dentro da conspiração",
@@ -209,6 +208,7 @@
     "buildings.workshop.desc": "Permite desenvolver diversas melhorias. Aumenta a efetividade de fabricação em 6%.",
     "buildings.workshop.flavor": "Brinquedos de graça para trabalhadores",
     "buildings.zebraForge.label": "Forja das Zebras",
+    "buildings.zebraForge.desc": "Desbloqueia a fabricação de pedras de sangue e t-mitril.",
     "buildings.zebraOutpost.label": "Entreposto de zebras",
     "buildings.zebraOutpost.desc": "Fornece uma base para as expedições de caça. Cada nível de melhoria melhora a eficácia da expedição em 5%",
     "buildings.zebraWorkshop.label": "Oficina de Zebras",
@@ -440,6 +440,8 @@
     "effectsMgr.statics.solarFarmSeasonRatio.title": "Bônus sazonal da Fazenda Solar",
     "effectsMgr.statics.solarRevolutionLimit.title": "Aumento do limite da revolução solar",
     "effectsMgr.statics.solarRevolutionRatio.title": "Bônus de produção",
+    "effectsMgr.statics.pyramidGlobalResourceRatio.title": "Armazenamento",
+    "effectsMgr.statics.pyramidFaithRatio.title": "Bônus de fé",
     "effectsMgr.statics.faithSolarRevolutionBoost.title": "Impulso de Revolução Solar da Fé",
     "effectsMgr.statics.spaceBeacon-starchartPerTickBaseSpace.title": "Farol Espacial - Produção de mapas estelares",
     "effectsMgr.statics.spaceElevator-prodTransferBonus.title": "Elevador Espacial - Bônus de produção transferida",
@@ -562,6 +564,7 @@
     "opts.theme.cyber": "Ciber",
     "opts.theme.dark": "Invertido",
     "opts.theme.default": "Classico",
+    "opts.theme.dune": "Duna",
     "opts.theme.factory": "Fábrica",
     "opts.theme.fluid": "Fluído",
     "opts.theme.gold": "Dourado",
@@ -670,7 +673,6 @@
     "prestige.adjustmentBureau.desc": "Desbloqueia desafios de jogo adicionais.",
     "prestige.anachronomancy.label": "Anacronomancia",
     "prestige.anachronomancy.desc": "Cristais de Tempo e cronofísica serão salvos entre recomeços.",
-    "prestige.ascoh.label": "ASCOH",
     "prestige.ascoh.desc": "Um Conselho Secreteo de Chapéus",
     "prestige.astromancy.label": "Astromancia",
     "prestige.astromancy.desc": "Dobra a chance de eventos estelares e a efetividade dos observatórios",
@@ -687,7 +689,6 @@
     "prestige.chronomancy.desc": "Meteoros e eventos estelares acontecerão com maior frequência.",
     "prestige.codexAgrum.desc": "Melhora a proporção de fabricação de diagramas em 25%.",
     "prestige.codexLeviathanianus.desc": "Aumenta o limite de corte de compêndios por 5% por grau de transcendência",
-    "prestige.codexLogos.label": "Codex Logos",
     "prestige.codexLogos.desc": "Melhora a proporção de fabricação de compêndios em 25%.",
     "prestige.codexVox.desc": "Melhora a proporção de fabricação de manuscritos em 25%.",
     "prestige.diplomacy.label": "Diplomacia",
@@ -782,6 +783,7 @@
     "religion.tu.blackCore.desc": "Modifica e corrompe as leis da realidade num escala mínima.<br />Cada nível do Núcleo Negro aumenta o limite de BLS em 1%.",
     "religion.tu.blackCore.flavor": "Construído com os ossos de gatos sacrificados.",
     "religion.tu.blackLibrary.label": "Biblioteca Negra",
+    "religion.tu.blackLibrary.flavor": "Parece que está escuro demais para ler de propósito.",
     "religion.tu.blackNexus.label": "Nexo Negro",
     "religion.tu.blackNexus.desc": "Aumenta o ritmo em que cristais do tempo se refinam em relíquias.<br />Cada Nexo Negro aumenta a eficiência de Refinamento de Relíquias para cada Pirâmide Negra.<br>Também melhora a eficiência das Estações de Relíquias",
     "religion.tu.blackNexus.flavor": "De olho no céu.",
@@ -828,7 +830,6 @@
     "unit.hour": "hora",
     "unit.h": "h",
     "unit.day": "dia",
-    "unit.d": "d",
     "unit.year": "ano",
     "unit.y": "a",
     "res.effect": "Efeito",
@@ -851,10 +852,12 @@
     "res.stack.environmentPolicy": "Política ambiental",
     "res.stack.expansionism": "Bônus de Cosmoliberalismo",
     "res.stack.faith": "Fé",
+    "res.stack.holyGenocide": "Santo Genocídio",
     "res.stack.solarRevolution": "Revolução Solar",
     "res.stack.festival": "Efeito de Festival Cíclico",
     "res.stack.knowledgeShared": "Conhecimento compartilhado",
     "res.stack.mysticism": "Misticismo",
+    "res.stack.necrocracy": "BLS Bônus de produção",
     "res.stack.paragon": "Paradigma",
     "res.stack.production": "Produção",
     "res.stack.rankLeaderBonusConversion": "Conversão de bônus de líder",
@@ -927,6 +930,7 @@
     "resources.spice.title": "especiarias",
     "resources.starchart.title": "mapa estelar",
     "resources.steel.title": "aço",
+    "resources.tMythril.title": "T-Mithril",
     "resources.tanker.title": "petroleiro",
     "resources.tears.title": "lágrimas",
     "resources.temporalFlux.title": "fluxo temporal",
@@ -942,9 +946,11 @@
     "resources.epiphany.title": "epifania",
     "resources.wrappingPaper.title": "papel de embrulho",
     "resources.zebras.title": "zebras",
+    "gift.repaired": "Os deuses anciões consertaram sua caixa de presente",
     "gift.resources": "Obteve {0} {1}!",
     "gift.apocrypha": "Apocrypha Bônus Aumentado por {0}%!",
     "gift.transcendence": "Nível de Transcendência aumentou em 4!",
+    "gift.metaphysics": "Obteve {0}!",
     "save.export.msg": "Exportação completa!",
     "save.import.confirmation.msg": "Tem certeza? Isso vai apagar seu jogo atual!",
     "save.import.msg": "Importação completa!",
@@ -1098,6 +1104,7 @@
     "science.orbitalEngineering.desc": "Engenharia Orbital permite à civilização felina de desenvolver projetos espaciais avançados.",
     "science.orbitalEngineering.effectDesc": "Desbloqueia Estações Espaciais e Telescópio Hubble",
     "science.paradoxalKnowledge.label": "Conhecimento Paradoxal",
+    "science.paradoxalKnowledge.desc": "A ser anunciado",
     "science.paradoxalKnowledge.effectDesc": "Desbloqueia Cronocontrole e Recuperação de Recursos",
     "science.particlePhysics.label": "Física de Partículas",
     "science.particlePhysics.desc": "Física de partículas nos traz um passo mais perto de entender a natureza de matéria e energia do que seu antecessor, Física Nuclear",
@@ -1111,6 +1118,7 @@
     "science.physics.effectDesc": "Desbloqueia alguns melhoramentos úteis.",
     "science.quantumCryptography.label": "Criptografia Quântica",
     "science.quantumCryptography.desc": "A ser anunciado",
+    "science.quantumCryptography.effectDesc": "A ser anunciado",
     "science.robotics.label": "Robótica",
     "science.robotics.desc": "Robótica melhora estruturas automatizadas como Calcinadores",
     "science.robotics.effectDesc": "Desbloqueia Planta Siderúrgica, Hidroelétricas, Petroleiros e Fornos Rotativos",
@@ -1198,7 +1206,6 @@
     "space.planet.helios.sunforge.label": "Forja Solar",
     "space.planet.helios.sunlifter.label": "Eleva-Sóis",
     "space.planet.helios.sunlifter.desc": "Gera antimatéria uma vez por ano. Inativa se a produção de energia é negativa",
-    "space.planet.kairo.label": "Kairo",
     "space.planet.kairo.spaceBeacon.label": "Farol Espacial",
     "space.planet.kairo.spaceBeacon.desc": "Uma estação espacial energizada por antimatéria usada para pesquisa e navegação interestelar.",
     "space.planet.moon.moonBase.label": "Base Lunar",
@@ -1221,6 +1228,7 @@
     "space.planet.yarn.terraformingStation.desc": "Explode uma carga de antimatéria para derreter o gelo de Novelo e jogar oxigênio na atmosfera",
     "space.panel.rorshach.label": "Rorshach",
     "space.rorschachMission.desc": "Rorschach é o maior cometa próximo à Helios.",
+    "space.rorschachMission.label": "Rorshach",
     "space.mission.rorschach.complete.log.msg": "Rorschach é impenetrável, mas  agora você pode ver mais longe.",
     "space.terminusMission.label": "Missão T-minus",
     "space.terminusMission.desc": "Terminus é um gigante de gelo supermassivo no fim do sistema solar Helios.",
@@ -1247,6 +1255,7 @@
     "stats.unicorns": "Unicórnios Sacrificados",
     "stats.years.total": "Total de Anos Jogados",
     "tab.name.achievements": "Conquistas",
+    "tab.name.challenges": "Desafios",
     "tab.name.religion": "Religião",
     "tab.name.science": "Ciência",
     "tab.name.space": "Espaço",
@@ -1255,7 +1264,6 @@
     "tab.name.trade": "Troca",
     "tab.name.workshop": "Oficina",
     "techs.panel.label": "Tecnologia",
-    "time.AccelerateTimeBtn.label": "Tempus Fugit",
     "time.AccelerateTimeBtn.desc": "Aumente e diminua a velocidade do tempo como quiser (+50% aceleração)",
     "time.AccelerateTimeBtn.tooltip.normal": "Fluxo de tempo normal",
     "time.AccelerateTimeBtn.tooltip.accelerated": "Fluxo de tempo acelerado",
@@ -1351,6 +1359,7 @@
     "ui.filter.available": "Disponíveis",
     "ui.filter.enabled": "Ativado",
     "ui.filter.togglable": "Desligável",
+    "ui.kgnet.save.save": "Salvar",
     "ui.kgnet.instructional": "<- Clique neste link para começar. Depois do carregamento de dados, clique em 'Criar Save'.",
     "ui.toggle.researched": "Alternar pesquisados",
     "ui.loading.msg.0": "Alimentando zebras",
@@ -1380,6 +1389,7 @@
     "ui.option.language": "Idioma:",
     "ui.option.language.add": "Adicionar tradução",
     "ui.option.language.apply": "Aplicar mudanças",
+    "ui.option.scheme": "Esquema de Cores:",
     "ui.option.force.high.precision": "Usar precisão alta para valores dos recursos",
     "ui.option.use.per.second.values": "Use valores por segundo <i>(caso contrário, os valores serão por tique)</i>",
     "ui.option.use.percentage.resource.values": "Usar valores percentuais de produção de recursos",
@@ -1395,12 +1405,14 @@
     "ui.option.export.button": "Exportação",
     "ui.option.import.button": "Importação",
     "ui.option.export": "Exportar para:",
+    "ui.option.export.dropbox": "Dropbox (Beta)",
     "ui.option.export.simple.file": "Arquivo (nome simples)",
     "ui.option.export.full.file": "Arquivo (nome completo)",
     "ui.option.export.text": "Exportação de texto:",
     "ui.option.close.button": "Fechar",
     "ui.option.import.warning": "Aviso! Importar dados vai sobrescrever seus dados de jogo atuais.",
     "ui.option.import.from": "Importar de:",
+    "ui.option.import.from.dropbox": "Dropbox (Beta)",
     "ui.option.import.from.text": "Importar texto:",
     "ui.option.do.import.button": "Importação",
     "ui.option.cancel.button": "Cancelar",
@@ -1468,6 +1480,7 @@
     "village.general.free.kittens.label": "Gatos disponíveis",
     "village.happiness.base": "Base",
     "village.happiness.buildings": "Construções",
+    "village.happiness.challenges": "Desafios",
     "village.happiness.environment": "Efeito do meio ambiente",
     "village.happiness.festival": "Festival",
     "village.happiness.karma": "Carma",
@@ -1562,7 +1575,15 @@
     "wipe.confirmation.title": "Confirmação de limpeza",
     "wipe.confirmation.msg1": "Todos os seus dados salvos serão DESTRUÍDOS, tem certeza?",
     "wipe.confirmation.msg2": "Certeza ABSOLUTA??",
+    "workshop.refine.confirmation": "Seus gatos vão MORRER!",
+    "res.per.sec": "seg",
+    "res.per.day": "dia",
+    "res.per.year": "ano",
+    "res.energy.wt": "Wt",
+    "menu.language": "Idioma",
     "about.feedback": "Fórum de Feedback",
+    "iron.will.warning.msg": "Isto vai acabar com o modo Vontade de Ferro. Tem certeza?",
+    "effectsMgr.timeImpedance.title": "Impedância Temporal",
     "village.label.na": "Não Aplicável",
     "village.name.Oscar": "Óscar",
     "village.name.Cassie": "Cacau",
@@ -1571,6 +1592,11 @@
     "village.surname.Fur": "Pelagem",
     "village.surname.Scratch": "Arranhar",
     "village.surname.Berry": "Cereja",
+    "eta.year": "a",
+    "eta.hour": "h",
+    "eta.min": "m",
+    "eta.sec": "seg",
+    "modal.button.cancel": "Cancelar",
     "workshop.upgradePanel.label": "Melhorias",
     "workshop.all.upgrades.unlocked": "Todas as melhorias foram desbloqueadas!",
     "workshop.toggleResearched.label": "Esconder melhorias já pesquisadas",
