--- a/res/i18n/crowdin/cz.json
+++ b/res/i18n/crowdin/cz.json
@@ -452,6 +452,9 @@
     "effectsMgr.statics.skillXP.title": "Učení se schopnostem",
     "effectsMgr.statics.smelterRatio.title": "Bonus k huťím",
     "effectsMgr.statics.solarFarmRatio.title": "Bonus solárním farmám",
+    "effectsMgr.statics.solarRevolutionRatio.title": "Bonus k výrobě",
+    "effectsMgr.statics.pyramidGlobalResourceRatio.title": "Skladovací prostor",
+    "effectsMgr.statics.pyramidFaithRatio.title": "Bonus k víře",
     "effectsMgr.statics.spaceBeacon-starchartPerTickBaseSpace.title": "Vesmírný maják – Výroba hvězdných map",
     "effectsMgr.statics.spaceElevator-prodTransferBonus.title": "Vesmírný výtah - Převedený bonus z produkce",
     "effectsMgr.statics.spaceRatio.title": "Bonus k vesmírné výrobě",
@@ -487,10 +490,12 @@
     "effectsMgr.type.resConversion": "Přeměna {0}",
     "effectsMgr.type.resCraftRatio": "{0} výrobní účinnost",
     "effectsMgr.type.resDemandRatio": "{0} - spotřeba snížena",
-    "effectsMgr.type.resMax": "Max {0}",
+    "effectsMgr.type.resMax": "Maximální {0}",
     "effectsMgr.type.resProduction": "Výroba {0}",
     "effectsMgr.type.resRatio": "{0} bonus",
     "effectsMgr.statics.ironPolicyRatio.title": "Bonus produkce železa",
+    "effectsMgr.statics.unobtainiumPolicyRatio.title": "Bonus k produkci nezískatelnia",
+    "effectsMgr.statics.culturePolicyRatio.title": "Bonus k produkci kultury",
     "effectsMgr.statics.woodPolicyRatio.title": "Bonus produkce dřeva",
     "effectsMgr.statics.summerSolarFarmRatio.title": "Letní bonus solární farmy",
     "general.copy.to.clipboard.prompt": "Zkopírovat do schránky: Ctrl+C, Enter",
@@ -555,6 +560,7 @@
     "opts.theme.cyber": "Kyber",
     "opts.theme.dark": "Převráceně",
     "opts.theme.default": "Klasické",
+    "opts.theme.dune": "Duna",
     "opts.theme.factory": "Továrna",
     "opts.theme.fluid": "Kapalný",
     "opts.theme.gold": "Zlato",
@@ -669,6 +675,7 @@
     "prestige.zebraDiplomacy.desc": "Některé zebry-lovci zůstanou ve vesnici. (Pro použití musíte nejdříve mít nějaké zebry).",
     "religion.adoreBtn.label": "Vzývat galaxii",
     "religion.adoreBtn.desc": "Zkonvertuj veškerou Tvou víru na zjevení.",
+    "religion.btn.refine": "Rafinovat",
     "religion.faithCount.pool": "Pobožnost: {0}",
     "religion.adore.confirmation.msg": "Jseš si jistý, že chceš resetovat hromadění víry?\n\nDostaneš bonus k přenos víry odpovídající celkovému množství víry nahromaděné chválením.\n\nTento bonus přetrvává mezi resety.\n\nKLIKNUTÍ NA TOTO TLAČÍTKO ODSTRANÍ VEŠKEROU VÍRU, NAHROMADĚNOU PŘES MODLENÍ.",
     "religion.msg.corruption": "Tvůj křídlorožec byl zkorumpován značkovačem!",
@@ -759,8 +766,14 @@
     "religion.zu.unicornTomb.desc": "Zlepšuje generování jednorožců o 5 %",
     "religion.zu.unicornUtopia.label": "Jednorožčí Utopie",
     "religion.zu.unicornUtopia.desc": "Zlepšuje tvůj získ jednorožců o 250%. Zvyšuje šanci na přivolání křídlorožců. Zlepšuje zisk z jejich obětování o 5%",
+    "unit.watt": "Wt",
     "unit.sec": "s",
-    "unit.min": "min",
+    "unit.s": "s",
+    "unit.m": "m",
+    "unit.h": "h",
+    "unit.d": "d",
+    "unit.year": "rok",
+    "unit.y": "r",
     "res.effect": "Efekt",
     "res.effects": "Efekty",
     "res.netGain": "Čistý získ",
@@ -779,6 +792,7 @@
     "res.stack.demand": "(:3) Poptávka",
     "res.stack.engineer": "(:3) Inženýr",
     "res.stack.faith": "Víra",
+    "res.stack.holyGenocide": "Svatá Genocida",
     "res.stack.solarRevolution": "Solární Revoluce",
     "res.stack.festival": "Účinek ročního cyklu z masopustů",
     "res.stack.magnetos": "Magneťáky",
@@ -808,6 +822,7 @@
     "resources.alloy.title": "slitina",
     "resources.antimatter.title": "antihmota",
     "resources.beam.title": "dřevěný sloup",
+    "resources.bloodstone.title": "krvivec",
     "resources.blueprint.title": "modrotisk",
     "resources.burnedParagon.title": "spálený paragon",
     "resources.catnip.title": "šanta",
@@ -825,6 +840,7 @@
     "resources.gold.title": "zlato",
     "resources.iron.title": "železo",
     "resources.ivory.title": "slonovina",
+    "resources.karma.title": "karma",
     "resources.kerosene.title": "petrolej",
     "resources.kittens.title": "koťata",
     "resources.manpower.title": "pracovní síla",
@@ -1047,6 +1063,7 @@
     "science.theology.desc": "Teologie je nauka o náboženství. Náboženství je klíčový koncept ovlivňující kulturní, vědecký a průmyslový rozvoj.",
     "science.theology.effectDesc": "Odemyká náboženství",
     "science.theology.flavor": "A co je vlastně ta ohnivá koule na nebi?",
+    "science.thorium.label": "Thorium",
     "science.thorium.desc": "Thorium je extrémně radioaktivní a energeticky výkonný izotop, který má využití v některých technologiích vesmírné doby.",
     "science.thorium.effectDesc": "Odemyká Thoriové Reaktory a Thoriový Pohon",
     "science.voidSpace.label": "Prostor Prázdna",
@@ -1127,8 +1144,9 @@
     "space.planet.yarn.hydroponics.desc": "Supermoderní automatizovaný hydroponický systém. Zvýší limit šanty o 10 %. Zvýší produkci šanty o 2.5 %",
     "space.planet.yarn.terraformingStation.label": "Terraformovací stanice",
     "space.planet.yarn.terraformingStation.desc": "Odpálit nálož antihmoty, která rozpuštění zledovatělou přízi a vypustí tak kyslík do atmosféry",
-    "space.panel.rorshach.label": "Rorschach",
+    "space.panel.rorshach.label": "Rorshach",
     "space.rorschachMission.desc": "Rorschach je největší kometa u Heliosu.",
+    "space.rorschachMission.label": "Rorshach",
     "space.mission.rorschach.complete.log.msg": "Rorschach je neproniknutelný, ale teď vidíš mnohem dál.",
     "space.terminusMission.label": "Mise na T-minus",
     "space.terminusMission.desc": "Terminus je masivní ledový obr na vzdáleném konci soustavy Helios.",
@@ -1225,6 +1243,7 @@
     "trade.race.sharks": "Žraloci",
     "trade.race.spiders": "Pavouci",
     "trade.race.zebras": "Zebry",
+    "trade.leviathans.energy": "Energie: ",
     "trade.send.caravan": "Vyslat karavanu",
     "trade.send.caravan.desc": "Vyměnit nekteré tvoje věci za určité suroviny. Množství se může lišit podle ročního období.<br>Taky máš malou šanci získat vzácné suroviny.",
     "trade.send.explorers": "Poslat průzkumníky",
@@ -1241,10 +1260,16 @@
     "ui.filter.all": "Vše",
     "ui.filter.available": "Dostupný",
     "ui.filter.enabled": "Povoleno",
+    "ui.kgnet.save.save": "Uložit",
     "ui.toggle.researched": "Nezobrazovat vyzkoumané",
     "ui.loading.msg.8": "Vypouštění satelitů",
     "ui.loading.msg.10": "Vzývání Slunce",
     "ui.loading.msg.15": "Opravy temporálních paradoxů",
+    "ui.energy.tooltip": "Energie",
+    "ui.clear.log": "Vymazat záznam",
+    "ui.close": "zavřít",
+    "ui.option.language": "Jazyk:",
+    "ui.option.scheme": "Barevný motiv:",
     "ui.option.use.percentage.resource.values": "Použití procentuálních hodnot produkce zdrojů",
     "ui.option.show.non.applicable.buttons": "Vždy zobrazovat tlačítka masopustu/obchodu/obětování/otřesu, i když není použitelné",
     "ui.option.more": "Více..",
@@ -1265,7 +1290,6 @@
     "ui.option.do.import.button": "Importovat",
     "ui.option.cancel.button": "Zrušit",
     "ui.option.app.text": "Kitten Game byl vydán pro mobil! Klikněte na tento link pro další informaci:",
-    "ui.option.app.android": "Android",
     "ui.option.app.ios": "iOS",
     "ui.option.notation": "Poznámky:",
     "left.resources": "zdroje",
@@ -1288,6 +1312,7 @@
     "console.filter.ivoryMeteor": "Meteory slonoviny",
     "console.filter.unicornRift": "Jednorožčí trhliny",
     "console.filter.alicornRift": "Křídlorožčí trhliny",
+    "console.filter.faith": "Víra",
     "village.bonus.desc.chemist": "Bonus na chemickou výrobu",
     "village.bonus.desc.engineer": "Výrobní bonus",
     "village.bonus.desc.manager": "Lovecký bonus",
@@ -1413,7 +1438,9 @@
     "wipe.confirmation.title": "Potvrzení úplného resetu",
     "wipe.confirmation.msg1": "Všechny uložené data hry budou SMAZÁNA. Chceš pokračovat?",
     "wipe.confirmation.msg2": "Jseš si ABSOLUTNĚ jistý/á?",
+    "workshop.refine.confirmation": "Tvoje koťata UMŘOU!",
     "res.per.sec": "s",
+    "res.per.year": "rok",
     "res.energy.wt": "Wt",
     "menu.language": "Jazyk",
     "about.title": "Hra Kittens od Nuclear Unicorn",
