--- a/res/i18n/crowdin/de.json
+++ b/res/i18n/crowdin/de.json
@@ -751,6 +751,7 @@
     "policy.zebraRelationsBellicosity.label": "Zebra Beziehungen: Kriegslust",
     "policy.zebraRelationsBellicosity.desc": "Setzen Sie sich gegen die Zebras durch, indem Sie den Handel mit ihnen verschlechtern, aber den Respekt der anderen Völker gewinnen.",
     "pollution.increasing": "Verschmutzung nimmt derzeit zu",
+    "pollution.label": "Umweltverschmutzung",
     "pollution.level1.warning": "Wissenschafter warnen vor Verschmutzungen, die den Katzenminzeertrag vermindern könnten.",
     "pollution.level1": "Katzenminzproduktion ist beeinflusst durch Umweltverschmutzung",
     "prestige.panel.label": "Metaphysik",
@@ -778,7 +779,6 @@
     "prestige.chronomancy.desc": "Meteor- und Sternereignisse passieren häufiger.",
     "prestige.codexAgrum.label": "Codex Agrum",
     "prestige.codexAgrum.desc": "Verbessert das Verhältnis der Blaupausenherstellung um 25%",
-    "prestige.codexLeviathanianus.label": "Codex Leviathanianus",
     "prestige.codexLeviathanianus.desc": "Anhebung der Kompendien-Abschneidegrenze um 5% pro Transzendenzstufe",
     "prestige.codexLogos.label": "Kodex Logos",
     "prestige.codexLogos.desc": "Verbessert das Verhältnis der Kompendiumsherstellung um 25%",
@@ -798,13 +798,11 @@
     "prestige.hod.desc": "Verbessert Paragoneffekt und -skalierung um 5%",
     "prestige.keter.label": "Keter",
     "prestige.keter.desc": "Verbessert Paragoneffekt und -skalierung um 5%",
-    "prestige.malkuth.label": "Malkuth",
     "prestige.malkuth.desc": "Verbessert Paragoneffekt und -skalierung um 5%",
     "prestige.megalomania.label": "Größenwahn.",
     "prestige.megalomania.desc": "Schaltet neue Megastrukturen frei.",
     "prestige.navigationDiplomacy.label": "Navigations-Diplomatie",
     "prestige.navigationDiplomacy.desc": "Sobald du Schiffe hast, können Rassen entdeckt werden.",
-    "prestige.netzach.label": "Netzach",
     "prestige.netzach.desc": "Verbessert Paragoneffekt und -skalierung um 5%",
     "prestige.numerology.label": "Numerologie",
     "prestige.numerology.desc": "Bestimmte Jahre haben Spezialeffekte.",
@@ -812,7 +810,6 @@
     "prestige.numeromancy.desc": "Bestimmte Jahre haben Extra-Effekte während eines Festivals.",
     "prestige.pawgan.label": "Pawgan Rituale",
     "prestige.pawgan.desc": "Kätzchen werden 150% schneller ankommen.",
-    "prestige.renaissance.label": "Renaissance",
     "prestige.renaissance.desc": "Reduziert alle Preisverhältnisse um 2.25%",
     "prestige.tiferet.label": "Tiferet",
     "prestige.tiferet.desc": "Verbessert Paragoneffekt und -skalierung um 5%",
@@ -889,6 +886,7 @@
     "religion.tu.blackCore.flavor": "Gebaut aus den Knochen von geopferten Kätzchen.",
     "religion.tu.blackLibrary.label": "Schwarze Bibliothek",
     "religion.tu.blackLibrary.desc": "Jede Schwarze Bibliothek verbessert die Skalierung des Codex Leviathanianus um 2%. Dieser Wert wird durch Einhorn-Friedhöfe weiter verbessert.",
+    "religion.tu.blackLibrary.flavor": "Vielleicht ist es absichtlich zu dunkel zum Lesen.",
     "religion.tu.blackNexus.label": "Schwarzer Nexus",
     "religion.tu.blackNexus.desc": "Improves the rate you refine time crystals into relics.<br />Every Black Nexus will increase your Relic Refine efficiency by the number of Black Pyramid.<br>This effect also boosts the effectiveness of Relic Stations",
     "religion.tu.blackNexus.flavor": "Auge im Himmel.",
@@ -916,7 +914,6 @@
     "religion.zu.ivoryCitadel.desc": "Erhöht deine Einhorngeneration um 25%, beschwört Elfenbeinmeteore",
     "religion.zu.ivoryTower.label": "Elfenbeinturm",
     "religion.zu.ivoryTower.desc": "Erhöht Einhornwachstum um 10%, schaltet Einhornrisse frei",
-    "religion.zu.marker.label": "Marker",
     "religion.zu.marker.desc": "Ein seltsames Gebilde aus einem unbekannten Metall, das einen unbekannten Zweck erfüllt.",
     "religion.zu.skyPalace.label": "Himmelspalast",
     "religion.zu.skyPalace.desc": "Improves your unicorns generation by 50%. There was a legend of ancient and mysterious beings inhabitings this place long ago.",
@@ -969,7 +966,7 @@
     "res.stack.solarRevolution": "Solar-Revolution",
     "res.stack.festival": "Zyklus Festival Effekt",
     "res.stack.knowledgeShared": "Forschung geteilt",
-    "res.stack.magnetos": "Magnetos",
+    "res.stack.magnetos": "Zünder",
     "res.stack.mysticism": "Mystik",
     "res.stack.necrocracy": "BLS-Produktionsbonus",
     "res.stack.paragon": "Vorbild",
@@ -1266,7 +1263,7 @@
     "science.tachyonTheory.label": "Tachyonentheorie",
     "science.tachyonTheory.desc": "Tachyonische Partikel sind hypothetische Partikel, die immer Überlichtgeschwindigkeit haben.",
     "science.tachyonTheory.effectDesc": "Schaltet Tachyon-Beschleuniger und Chronoschmiede frei",
-    "science.terraformation.label": "Terraformation",
+    "science.terraformation.label": "Terraforming",
     "science.terraformation.desc": "Die Terraformationstechnologie konzentriert sich auf den Einsatz der Antimaterie, um das Klima des Exoplaneten des Cath-Systems zu verändern",
     "science.terraformation.effectDesc": "Schaltet Terraforming-Stationen frei",
     "science.theology.label": "Theologie",
@@ -1338,7 +1335,6 @@
     "space.planet.helios.sunforge.desc": "Nutzt die Wärme der Sonne um Materialien in superverdichtetes Plasma umzuwandeln. Jede Ausbaustufe der Sonnenschmiede erweitert den Speicher der Grundmaterialien um 1%.",
     "space.planet.helios.sunlifter.label": "Sonnenlift",
     "space.planet.helios.sunlifter.desc": "Generiert einmal im Jahr Antimaterie. Funktioniert nicht, sollte die Energieproduktion negativ sein.",
-    "space.planet.kairo.label": "Kairo",
     "space.planet.kairo.spaceBeacon.label": "Weltraumleuchtfeuer",
     "space.planet.kairo.spaceBeacon.desc": "Eine durch Antimaterie betriebene Weltraumstation, welche für Forschung und Navigation genutzt wird.",
     "space.planet.moon.label": "Rotmond",
@@ -1368,7 +1364,7 @@
     "space.planet.yarn.terraformingStation.desc": "Lass eine Ladung Antimaterie explodieren, um das Eis zu schmelzen und dadurch Sauerstoff in die Atmosphäre freizusetzen.",
     "space.panel.rorshach.label": "Rorshach",
     "space.rorschachMission.desc": "Rorschach ist der größte Komet nahe Helios.",
-    "space.rorschachMission.label": "Rorschach",
+    "space.rorschachMission.label": "Rorshach",
     "space.mission.rorschach.complete.log.msg": "Rorschach ist undurchdringlich - aber du siehst nun weiter.",
     "space.terminusMission.label": "T-minus Mission",
     "space.terminusMission.desc": "Terminus ist ein supermassiver Eisgigant am Ende des Helios Solarsystems.",
@@ -1598,7 +1594,6 @@
     "ui.option.app.text": "Kittens Game Mobile ist erschienen! Klicke auf den Link um zu folgen:",
     "ui.option.app.android": "Android",
     "ui.option.app.ios": "iOS",
-    "ui.option.notation": "Notation:",
     "queue.alphabeticalToggle": "Sortiere Warteschlangeninhalt alphabetisch",
     "left.resources": "ressourcen",
     "left.resources.tip": "Strg+Klick, um eine Ressource auszublenden, weitere Einstellungen über das Zahnrad.",
@@ -1663,7 +1658,6 @@
     "village.happiness.challenges": "Herausforderungen",
     "village.happiness.environment": "Umweltauswirkungen",
     "village.happiness.festival": "Fest",
-    "village.happiness.karma": "Karma",
     "village.happiness.overpopulation": "Überpopulation",
     "village.happiness.penalty": "Befölkerungsstrafe",
     "village.happiness.penalty.base": "Strafen Basis",
@@ -1790,7 +1784,6 @@
     "village.name.Timber": "Holz",
     "village.name.Meeko": "Meeko",
     "village.name.Micha": "Micha",
-    "village.name.Tami": "Tami",
     "village.name.Plato": "Plato",
     "village.surname.Smoke": "Smoke",
     "village.surname.Dust": "Staub",
@@ -1803,7 +1796,7 @@
     "village.surname.Scratch": "Scratch",
     "village.surname.Berry": "Berry",
     "village.surname.Shadow": "Schatten",
-    "eta.year": "y",
+    "eta.year": "j",
     "eta.day": "t",
     "eta.hour": "Std",
     "eta.min": "Min",
@@ -1921,7 +1914,6 @@
     "workshop.crafts.kerosene.desc": "Ein aus Öl hergestellter Raketentreibstoff",
     "workshop.crafts.manuscript.label": "Manuskript",
     "workshop.crafts.manuscript.desc": "Schriftliches Dokument, das für technologischen Fortschritt erförderlich est. Jedes Manuskript erhöht ein bisschen (mit abnehmenden Ertragszuwachs) die maximale Kultur",
-    "workshop.crafts.megalith.label": "Megalith",
     "workshop.crafts.megalith.desc": "Ein massiver Block, der genutzt werden kann, um riesige Strukturen zu bauen",
     "workshop.crafts.parchment.label": "Pergament",
     "workshop.crafts.parchment.desc": "Ein Material aus Tierhäuten, auf dem man schreiben kann, wird für kulturelle Gebäude benötigt.",
@@ -1935,6 +1927,7 @@
     "workshop.crafts.slab.desc": "Eine kleine Platte aus Mineralien. Benötigt für fortgeschrittenen Bau.",
     "workshop.crafts.steel.label": "Stahl",
     "workshop.crafts.steel.desc": "Ein widerstandsfähiges Metall, hergestellt durch das Schmelzen von Eisen und Kohle. Erforderlich für den Bau von Zahnrädern und komplexen Maschinen.",
+    "workshop.crafts.tMythril.label": "T-Mythril",
     "workshop.crafts.tanker.label": "Tankschiff",
     "workshop.crafts.tanker.desc": "Erhöhe die maximale Ölkapazität um 500",
     "workshop.crafts.thorium.label": "Thorium",
@@ -2081,11 +2074,9 @@
     "workshop.satnav.desc": "Jeder Satellit reduziert den Bedarf an Sternkarten von Schiffen um 1,25%",
     "workshop.seti.label": "SETI",
     "workshop.seti.desc": "Eine große Anordnung von elektronischen Teleskopen. Verarbeitet astronomische Ereignisse automatisch und ohne Benachrichtigung",
-    "workshop.silos.label": "Silos",
     "workshop.silos.desc": "Lagerhäuser können jetzt Katzenminze lagern",
     "workshop.silos.flavor": "Natürlich mit Teppichboden und Klettergriffen",
     "workshop.solarSatellites.label": "Sonnensatelliten",
-    "workshop.solarSatellites.desc": "Satellites will now generate energy instead of consuming it",
     "workshop.spaceEngineers.label": "Weltraumingenieure",
     "workshop.spaceEngineers.desc": "Verbessert Effektivität der Ingenieure",
     "workshop.spaceManufacturing.label": "Weltraumproduktion",
