--- a/res/i18n/crowdin/fr.json
+++ b/res/i18n/crowdin/fr.json
@@ -215,6 +215,7 @@
     "buildings.workshop.desc": "Permet de fabriquer des matériaux et d'améliorer de nombreuses choses. Augmente l'efficacité de la fabrication de 6%.",
     "buildings.workshop.flavor": "Jouets gratuits pour les employés.",
     "buildings.zebraForge.label": "Forge Zèbre",
+    "buildings.zebraForge.desc": "Débloque la fabrication de pierres de sang et de t-mythril.",
     "buildings.zebraOutpost.label": "Avant-poste Zèbre",
     "buildings.zebraOutpost.desc": "Fournit une base d'expéditions de chasse. Chaque niveau d'amélioration améliore l'efficacité des expéditions de 5%",
     "buildings.zebraWorkshop.label": "Atelier Zèbre",
@@ -712,7 +713,6 @@
     "prestige.ascoh.desc": "Club Confidentiel des Chatons Chapeautés",
     "prestige.astromancy.label": "Astromancie",
     "prestige.astromancy.desc": "Double les événements stellaires et l'efficacité des observatoires",
-    "prestige.binah.label": "Binah",
     "prestige.binah.desc": "Améliore l'effet des âmes de 5%",
     "prestige.blackCodex.label": "Codex Noir",
     "prestige.blackCodex.desc": "Débloque le cimetière de licornes",
@@ -728,11 +728,9 @@
     "prestige.chronomancy.desc": "Les météorites et événements stellaires se produiront plus souvent.",
     "prestige.codexAgrum.label": "Codex Agrum",
     "prestige.codexAgrum.desc": "Dessins techniques fabriqués +25%",
-    "prestige.codexLeviathanianus.label": "Codex Leviathanianus",
     "prestige.codexLeviathanianus.desc": "Augmente la limite de coupure des compendiums de 5% par niveau de transcendance",
     "prestige.codexLogos.label": "Symboles du Codex",
     "prestige.codexLogos.desc": "Encyclopédies fabriquées +25%",
-    "prestige.codexVox.label": "Codex Vox",
     "prestige.codexVox.desc": "Manuscrits fabriqués +25%",
     "prestige.diplomacy.label": "Diplomatie",
     "prestige.diplomacy.desc": "Les autres races seront découvertes plus tôt et vous aurez une meilleure réputation auprès d'elles. Débloque d'autres améliorations commerciales.",
@@ -740,21 +738,18 @@
     "prestige.divineProportion.desc": "Réduit tous les multiplicateurs de prix de 1,7%",
     "prestige.engeneering.label": "Ingénierie",
     "prestige.engeneering.desc": "Réduit le multiplicateur de prix de 1%. Débloque d'autres améliorations des prix.",
-    "prestige.gevurah.label": "Gevurah",
     "prestige.gevurah.desc": "Améliore l'effet des âmes de 5%",
     "prestige.goldenRatio.label": "Nombre d'or",
     "prestige.goldenRatio.desc": "Réduit tous les multiplicateurs de prix d'environ 1,618%",
     "prestige.hod.label": "Hotte",
     "prestige.hod.desc": "Améliore l'effet des âmes de 5%",
-    "prestige.keter.label": "Keter",
     "prestige.keter.desc": "Améliore l'effet des âmes de 5%",
-    "prestige.malkuth.label": "Malkuth",
+    "prestige.malkuth.label": "말쿠트",
     "prestige.malkuth.desc": "Améliore l'effet des âmes de 5%",
     "prestige.megalomania.label": "Mégalomanie",
     "prestige.megalomania.desc": "Débloque de nouvelles mégastructures.",
     "prestige.navigationDiplomacy.label": "Diplomatie de la navigation",
     "prestige.navigationDiplomacy.desc": "Vous pourrez découvrir de nouvelles races une fois que vous aurez des bateaux.",
-    "prestige.netzach.label": "Netzach",
     "prestige.netzach.desc": "Améliore l'effet des âmes de 5%",
     "prestige.numerology.label": "Numérologie",
     "prestige.numerology.desc": "Certaines années auront des effets particuliers",
@@ -774,7 +769,6 @@
     "prestige.voidOrder.desc": "Ajoute 10% foi produite, laquelle est automatiquement accumulée.",
     "prestige.willenfluff.label": "Vénus de Minou",
     "prestige.willenfluff.desc": "Les chatons arrivent 75% plus rapidement.",
-    "prestige.yesod.label": "Yesod",
     "prestige.yesod.desc": "Améliore l'effet des âmes de 5%",
     "prestige.zebraCovenant.label": "Convention Zébrée",
     "prestige.zebraCovenant.desc": "Davantage de Zèbres resteront avec vous.",
@@ -782,7 +776,6 @@
     "prestige.zebraDiplomacy.desc": "Quelques chasseurs Zèbres resteront dans le village.",
     "religion.adoreBtn.label": "Adorez la galaxie",
     "religion.adoreBtn.desc": "Convertir toute votre adoration en épiphanie.\nAnciennement [Réinitialisation de la foi]",
-    "religion.btn.sacrifice": "Sacrifice",
     "religion.btn.refine": "Rafine",
     "religion.faithCount.bonus": "bonus",
     "religion.faithCount.pool": "Adoration : {0}",
@@ -839,6 +832,7 @@
     "religion.tu.blackCore.flavor": "Construit avec les os de chatons sacrifiés.",
     "religion.tu.blackLibrary.label": "Bibliothèque Noire",
     "religion.tu.blackLibrary.desc": "Chaque Bibliothèque Noire améliore l'efficacité des Codex Léviathanianus de 2%. Cette valeur est également améliorée par les cimetières de licornes.",
+    "religion.tu.blackLibrary.flavor": "Peut-être qu'il est délibérément trop sombre pour lire.",
     "religion.tu.blackNexus.label": "Nexus noir",
     "religion.tu.blackNexus.desc": "Améliore le taux auquel vous raffinez les cristaux temporels en reliques.<br />Chaque nexus noir augmente le nombre de reliques raffinées du nombre de pyramides noires.<br> Cet effet accroît également l'efficacité des Stations de reliques",
     "religion.tu.blackNexus.flavor": "La tête dans les étoiles.",
@@ -889,9 +883,9 @@
     "unit.hour": "hr",
     "unit.h": "h",
     "unit.day": "Jour",
-    "unit.d": "d",
+    "unit.d": "일",
     "unit.year": "an",
-    "unit.y": "y",
+    "unit.y": "년",
     "res.effect": "Effet",
     "res.effects": "Effets",
     "res.netGain": "Bénéfice net",
@@ -903,7 +897,6 @@
     "res.stack.baseline": "Sans amélioration",
     "res.stack.baselineRatio": "Amélioration",
     "res.stack.bonusTransf": "Bonus transféré",
-    "res.stack.boost": "Boost",
     "res.stack.buildings": "Bâtiments",
     "res.stack.corruptionPerDay": "Corruption",
     "res.stack.policy": "Politique",
@@ -912,11 +905,13 @@
     "res.stack.convProd": "Produit de la conversion",
     "res.stack.culturalExchanges": "Échanges culturels",
     "res.stack.demand": "(:3) Demande",
+    "res.stack.destruction": "Pactes",
     "res.stack.engineer": "(:3) Ingénieur",
     "res.stack.environmentPolicy": "Politique environnementale",
     "res.stack.expansionism": "Bonus de cosmolibéralisme",
     "res.stack.extermination": "Pactes",
     "res.stack.faith": "Foi",
+    "res.stack.holyGenocide": "Génocide sacré",
     "res.stack.solarRevolution": "Ferveur",
     "res.stack.festival": "Effet cyclique des festivaux",
     "res.stack.knowledgeShared": "Connaissances partagées",
@@ -1015,6 +1010,7 @@
     "gift.resources": "Obtenu {0}{1} !",
     "gift.apocrypha": "Bonus d'Apocryphe augmenté de {0}% !",
     "gift.transcendence": "Niveau de Transcendance augmenté de 4 !",
+    "gift.metaphysics": "Obtenu {0}!",
     "save.export.msg": "Export de sauvegarde réussi !",
     "save.import.confirmation.msg": "Confirmez-vous ? Ceci va écraser votre sauvegarde !",
     "save.import.msg": "Import de sauvegarde réussi !",
@@ -1285,7 +1281,6 @@
     "space.planet.moon.moonBase.desc": "Établit une base sur la surface de Rougelune",
     "space.planet.moon.moonOutpost.label": "Avant-poste lunaire",
     "space.planet.moon.moonOutpost.desc": "Déploie un avant-poste fonctionnant à l'énergie nucléaire sur Rougelune",
-    "space.planet.piscine.label": "Piscine",
     "space.planet.piscine.orbitalArray.label": "Dispositif orbital",
     "space.planet.piscine.orbitalArray.desc": "Fournit +2% de production à toutes les structures spatiales",
     "space.planet.piscine.researchVessel.label": "Vaisseau de recherche",
@@ -1393,7 +1388,6 @@
     "trade.autopinned.labelOff": "Activer l'épinglage automatique",
     "trade.autopinned.desc": "Activation et désactivation de l'épinglage automatique. Quand elle est activée, les léviathans sont épinglés dès leur arrivée",
     "trade.attitude.friendly": "amical",
-    "trade.attitude.hostile": "hostile",
     "trade.attitude.neutral": "neutre",
     "trade.attitude.nowNeutral": "maintenant neutres",
     "trade.cost": "Prix ",
@@ -1645,7 +1639,6 @@
     "village.skill.skilled": "qualifié",
     "village.tab.clear.job.confirmation.msg": "Confirmez-vous ?",
     "village.tab.title.city": "Cité",
-    "village.tab.title.civilisation": "Civilisation",
     "village.tab.title.consortium": "Consortium",
     "village.tab.title.council": "Concile planétaire",
     "village.tab.title.deities": "Divinités",
@@ -1654,7 +1647,6 @@
     "village.tab.title.empire": "Empire",
     "village.tab.title.federation": "Fédération",
     "village.tab.title.hegemony": "Hégemonie",
-    "village.tab.title.imperium": "Imperium",
     "village.tab.title.megapolis": "Mégapôle",
     "village.tab.title.metropolis": "Metropole",
     "village.tab.title.outpost": "Avant-poste",
@@ -1684,7 +1676,7 @@
     "res.per.sec": "sec",
     "res.per.day": "jour",
     "res.per.year": "année",
-    "res.energy.wt": "Wt",
+    "res.energy.wt": "W",
     "menu.language": "Langue",
     "about.title": "Kittens Game par Nuclear Unicorn",
     "about.title.studio": "Studio",
@@ -1698,10 +1690,7 @@
     "effectsMgr.heatPerTick.title": "Dissipation de la chaleur",
     "effectsMgr.timeImpedance.title": "Impédance temporelle",
     "btn.praise": "Louer",
-    "village.label.na": "N/A",
     "village.name.Angel": "Ange",
-    "village.name.Oreo": "Oreo",
-    "village.name.Charlie": "Charlie",
     "village.name.Mittens": "Mittens",
     "village.name.Lily": "Lilly",
     "village.name.Ellie": "Ellie",
@@ -1713,10 +1702,8 @@
     "village.name.Maddie": "Maddie",
     "village.name.Cassie": "Cassie",
     "village.name.Timber": "Timber",
-    "village.name.Meeko": "Meeko",
-    "village.name.Micha": "Micha",
+    "village.name.Meeko": "미코",
     "village.name.Tami": "Tami",
-    "village.name.Plato": "Plato",
     "village.surname.Smoke": "Fumée",
     "village.surname.Dust": "Poussière",
     "village.surname.Chalk": "Chalk",
@@ -1733,7 +1720,6 @@
     "eta.hour": "h",
     "eta.min": "m",
     "eta.sec": "s",
-    "modal.button.ok": "OK",
     "modal.button.cancel": "Annuler",
     "workshop.upgradePanel.label": "Améliorations",
     "workshop.all.upgrades.unlocked": "Toutes les amélioration sont débloquées!",
@@ -1797,7 +1783,6 @@
     "workshop.celestialMechanics.desc": "Les évènements célestes et météorites génèreront plus de science",
     "workshop.chronoEngineers.label": "Chrono-Ingénieurs",
     "workshop.chronoEngineers.desc": "Improves Engineer's effectiveness",
-    "workshop.chronoforge.label": "Chronoforge",
     "workshop.chronoforge.desc": "Une technologie extracathienne de manipulation temporelle",
     "workshop.coalFurnace.label": "Fourneau à charbon",
     "workshop.coalFurnace.desc": "Les fonderies produisent du charbon en brulant du bois",
@@ -2015,7 +2000,6 @@
     "workshop.spaceEngineers.desc": "Augmente l'efficacité des ingénieurs",
     "workshop.spaceManufacturing.label": "Production spatiale",
     "workshop.spiceNavigation.label": "Navigation d'épices",
-    "workshop.starlink.label": "Starlink",
     "workshop.starlink.desc": "Chaque Data Center offrira un bonus supplémentaire de 1% au laboratoires biologiques",
     "workshop.stasisChambers.label": "Chambres de stase",
     "workshop.stasisChambers.desc": "Les failles énergétiques sont deux fois plus efficaces",
