--- a/res/i18n/crowdin/pl.json
+++ b/res/i18n/crowdin/pl.json
@@ -213,6 +213,7 @@
     "buildings.workshop.desc": "Zapewnia szeroką gamę ulepszeń. Poprawia wydajność wytwarzania o 6%",
     "buildings.workshop.flavor": "Darmowe zabawki dla pracowników",
     "buildings.zebraForge.label": "Kuźnia Zebry",
+    "buildings.zebraForge.desc": "Odblokowuje tworzenie krwawych kamieni i t-mytrylu.",
     "buildings.zebraOutpost.label": "Placówka Zebry",
     "buildings.zebraOutpost.desc": "Stanowi bazę dla wypraw myśliwskich. Każdy poziom ulepszenia poprawia skuteczność wyprawy o 5%",
     "buildings.zebraWorkshop.label": "Warsztaty Zebry",
@@ -453,6 +454,8 @@
     "effectsMgr.statics.solarFarmSeasonRatio.title": "Sezonowa premia za farmę słoneczną",
     "effectsMgr.statics.solarRevolutionLimit.title": "Zwiększenie limitu Rewolucji Słonecznej",
     "effectsMgr.statics.solarRevolutionRatio.title": "Premia do produkcji",
+    "effectsMgr.statics.pyramidGlobalResourceRatio.title": "Przechowywanie",
+    "effectsMgr.statics.pyramidFaithRatio.title": "Premia do wiary",
     "effectsMgr.statics.faithSolarRevolutionBoost.title": "Wzmocnienie Rewolucji Słonecznej",
     "effectsMgr.statics.spaceBeacon-starchartPerTickBaseSpace.title": "Kosmiczna Latarnia - Produkcja Map Nieba",
     "effectsMgr.statics.spaceElevator-prodTransferBonus.title": "Winda kosmiczna - Przeniesiona premia produkcyjna",
@@ -580,6 +583,7 @@
     "opts.theme.cyber": "Cybernetyczny",
     "opts.theme.dark": "Odwrócone",
     "opts.theme.default": "Klasyczny",
+    "opts.theme.dune": "Diuna",
     "opts.theme.factory": "Fabryka",
     "opts.theme.fluid": "Płynny",
     "opts.theme.gold": "Złoto",
@@ -839,11 +843,13 @@
     "religion.tu.blackCore.flavor": "Zbudowany z kości ofiar kociąt.",
     "religion.tu.blackLibrary.label": "Czarna Biblioteka",
     "religion.tu.blackLibrary.desc": "Każda Czarna Biblioteka poprawia skalowanie Kodeksów Leviathanianus o 2%. Wartość ta jest dodatkowo ulepszana przez Cmentarze Jednorożców.",
+    "religion.tu.blackLibrary.flavor": "Może nie bez powodu to jest zbyt ciemne by przeczytać",
     "religion.tu.blackNexus.label": "Czarny Nexus",
     "religion.tu.blackNexus.desc": "Poprawia tempo ulepszania kryształów czasu w relikwiach. <br /> Każdy Czarny Nexus zwiększy efektywność Redukcji Reliktów o liczbę Czarnych Piramid. <br> Efekt ten zwiększa również efektywność Stacji Relikwii",
     "religion.tu.blackNexus.flavor": "Oko na niebie.",
     "religion.tu.blackObelisk.label": "Czarny obelisk",
     "religion.tu.blackObelisk.desc": "Poprawia premię do wiary. <br /> Każdy Czarny Obelisk poprawi premię do poziomu transcendencji o 5%.",
+    "religion.tu.blackObelisk.flavor": "DZ",
     "religion.tu.blackRadiance.label": "Czarne Promieniowanie",
     "religion.tu.blackRadiance.desc": "Każdy procent BLS bardzo nieznacznie zwiększy współczynnik korupcji skrzydłorożca",
     "religion.tu.blackRadiance.flavor": "Jak tęcza w ciemności",
@@ -882,7 +888,6 @@
     "religion.zu.unicornUtopia.desc": "Poprawia generowanie jednorożców o 250%. Zwiększ szansę na przywołanie skrzydłorożca. Poprawia współczynnik rafinacji KC o 5%",
     "unit.watt": "Wt",
     "unit.sec": "sekundę",
-    "unit.s": "s",
     "unit.min": "min",
     "unit.m": "m",
     "unit.hour": "godzinę",
@@ -914,13 +919,13 @@
     "res.stack.environmentPolicy": "Polityka ochrony środowiska",
     "res.stack.expansionism": "Premia do kosmoliberalizmu",
     "res.stack.faith": "Wiara",
+    "res.stack.holyGenocide": "Święte ludobójstwo",
     "res.stack.solarRevolution": "Rewolucja słoneczna",
     "res.stack.festival": "Efekt festiwalu cyklicznego",
     "res.stack.knowledgeShared": "Dzielona Wiedza",
     "res.stack.magnetos": "Iskrowników",
     "res.stack.mysticism": "Mistycyzm",
     "res.stack.necrocracy": "Bonus produkcji BLS",
-    "res.stack.paragon": "Paragon",
     "res.stack.production": "Produkcja",
     "res.stack.rankLeaderBonusConversion": "Premia do konwersji od lidera",
     "res.stack.rationality": "Racjonalizm",
@@ -1011,6 +1016,7 @@
     "resources.zebras.title": "zebry",
     "resources.sorrow.full": "Smutek w postaci czarnego płynu",
     "resources.sorrow.short": "CPS",
+    "gift.repaired": "Starsi Bogowie naprawili Twoją skrzynkę podarunkową",
     "gift.resources": "Masz {0} {1}!",
     "gift.apocrypha": "Premia z Apokryfów zwiększona o {0}%!",
     "gift.transcendence": "Poziom Transcendencji zwiększony o 4!",
@@ -1047,6 +1053,7 @@
     "science.archery.label": "Łucznictwo",
     "science.archery.desc": "Broń dystansowa zwana 'Łuk'.",
     "science.archery.effectDesc": "Odblokowuje myśliwych",
+    "science.archery.flavor": "DZ",
     "science.architecture.label": "Architektura",
     "science.architecture.desc": "Architektura pozwala na konstrukcję nowych, wyrafinowanych struktur.",
     "science.architecture.effectDesc": "Odblokowuje Mennice i Rezydencje.",
@@ -1170,6 +1177,7 @@
     "science.orbitalEngineering.desc": "Inżynieria Orbitalna pozwala kociej cywilizacji na rozwój bardziej zaawansowanych projektów kosmicznych.",
     "science.orbitalEngineering.effectDesc": "Odblokowuje Stacje Kosmiczne i Teleskop Hubble'a",
     "science.paradoxalKnowledge.label": "Wiedza Paradoksalna",
+    "science.paradoxalKnowledge.desc": "DZ",
     "science.paradoxalKnowledge.effectDesc": "Odblokowuje Chronokontrolę i Odzyskiwanie Zasobów",
     "science.particlePhysics.label": "Fizyka Cząsteczkowa",
     "science.particlePhysics.desc": "Fizyka Cząsteczkowa zabiera nas jeden krok dalej w zrozumieniu natury materii i energii w porównaniu do jej przodka - Fizyki Nuklearnej",
@@ -1182,6 +1190,8 @@
     "science.physics.desc": "Fizyka to nauka o prawach natury. Głownie wspiera efektywność machinerii.",
     "science.physics.effectDesc": "Odblokowuje kilka użytecznych ulepszeń.",
     "science.quantumCryptography.label": "Kryptografia kwantowa",
+    "science.quantumCryptography.desc": "DZ",
+    "science.quantumCryptography.effectDesc": "DZ",
     "science.robotics.label": "Robotyka",
     "science.robotics.desc": "Robotyka ulepsza zautomatyzowane struktury takie jak Kalcynator",
     "science.robotics.effectDesc": "Odblokowuje Fabryki Stali, Elektrownie Wodne, Cysterny i Piece Obrotowe",
@@ -1253,7 +1263,6 @@
     "space.planet.centaurusSystem.moltenCore.desc": "Każdy poziom stopionego rdzenia poprawia skuteczność tektoniczną o 5%",
     "space.planet.centaurusSystem.tectonic.label": "Tektoniczny",
     "space.planet.centaurusSystem.tectonic.desc": "Wedrzyj się w planetę niedaleko gwiazdy Centaurus aby zebrać energię magmy.",
-    "space.planet.charon.label": "Charon",
     "space.planet.charon.entangler.label": "Stacja splątania",
     "space.planet.charon.entangler.desc": "Stacja splątania generuje zestaw splątanych cząstek zwanych qbitami dla twojego kwantowego systemu obliczeniowego. Proces ten wymaga ogromnej ilości mocy obliczeniowej, ale pozwili Ci na atak kryptograficzny na starsze algorytmy szyfrowania.",
     "space.planet.dune.label": "Diuna",
@@ -1586,7 +1595,6 @@
     "village.happiness.challenges": "Wyzwania",
     "village.happiness.environment": "Wpływ środowiska",
     "village.happiness.festival": "Festiwal",
-    "village.happiness.karma": "Karma",
     "village.happiness.overpopulation": "Bezdomność",
     "village.happiness.penalty": "Kara za przeludnienie",
     "village.happiness.penalty.base": "Podstawowa kara",
@@ -1674,6 +1682,7 @@
     "village.trait.scientist": "Naukowiec",
     "village.trait.wise": "Filozof",
     "void.spaceCathedral.label": "Katedra Kosmiczna",
+    "void.spaceCathedral.desc": "Do przyszłego ustalenia.",
     "wipe.confirmation.title": "Potwierdzenie wyczyszczenia",
     "wipe.confirmation.msg1": "Wszystkie zapisane dane zostaną ZNISZCZONE, czy jesteś pewien?",
     "wipe.confirmation.msg2": "Czy jesteś ABSOLUTNIE pewien?",
@@ -1697,7 +1706,6 @@
     "btn.praise": "Chwal",
     "village.label.na": "Nie dot.",
     "village.name.Angel": "Aniela",
-    "village.name.Oreo": "Oreo",
     "village.name.Charlie": "Charlie",
     "village.name.Mittens": "Burek",
     "village.name.Lily": "Lily",
@@ -1705,7 +1713,6 @@
     "village.name.Amber": "Amber",
     "village.name.Molly": "Molly",
     "village.name.Jasper": "Jasper",
-    "village.name.Oscar": "Oscar",
     "village.name.Theo": "Theo",
     "village.name.Maddie": "Maddie",
     "village.name.Cassie": "Cassie",
@@ -1729,7 +1736,6 @@
     "eta.day": "d",
     "eta.hour": "h",
     "eta.min": "min",
-    "eta.sec": "s",
     "modal.button.ok": "OK",
     "modal.button.cancel": "Anuluj",
     "workshop.upgradePanel.label": "Ulepszenia",
@@ -2000,7 +2006,6 @@
     "workshop.satelliteRadio.desc": "Każdy satelita zwiększy efekt wież transmisyjnych o 0.5%",
     "workshop.satnav.label": "Nawigacja Satelitarna",
     "workshop.satnav.desc": "Każdy satelita zmniejsza zapotrzebowanie statków na Mapy nieba o 1.25%",
-    "workshop.seti.label": "SETI",
     "workshop.seti.desc": "Duży wybór elektronicznych teleskopów. Sprawia, że ??wydarzenia astronomiczne są automatyczne i ciche",
     "workshop.silos.label": "Silosy",
     "workshop.silos.desc": "Magazyny mogą teraz przechowywać kocimiętkę",
