--- a/res/i18n/crowdin/ro.json
+++ b/res/i18n/crowdin/ro.json
@@ -91,6 +91,9 @@
     "buildings.biolab.desc": "Îmbunătățește eficacitatea rafinării de catnip cu 10%. Mai eficace dacă este împuternicire.",
     "buildings.field.label": "Câmp de iarba-mâței",
     "buildings.observatory.desc": "Crește șansa evenimentelor astronomice cu 0.2%",
+    "buildings.group.zebraBuildings": "Zebre",
+    "challendge.ironWill.label": "Voință de Fier",
+    "effectsMgr.statics.challengeHappiness.title": "Fericire",
     "effectsMgr.statics.energyProduction.title": "Producția de energie",
     "effectsMgr.statics.happiness.title": "Fericire",
     "effectsMgr.statics.hashrate.title": "Rata de calcul",
@@ -98,6 +101,7 @@
     "effectsMgr.statics.nextHashLevelAt.title": "Următorul nivel de hashrate la",
     "effectsMgr.statics.temporalParadoxVoid.title": "Vid maxim",
     "effectsMgr.statics.unhappinessRatio.title": "Reduce tristetea",
+    "menu.reset": "Resetare",
     "opts.lang": "Limba",
     "policy.clearSkies.label": "Cer senin",
     "policy.communism.desc": "Industrializare cu orice preț. Crește producția de cărbune, fier, și titaniu, și ieftineste fabricile.",
@@ -105,15 +109,21 @@
     "prestige.pawgan.label": "Ritualuri pagane",
     "religion.ru.goldenSpire.desc": "Templele pot înmagazina cu 50% mai multă credință",
     "religion.ru.solarchant.label": "Cântec solar",
+    "religion.sacrificeBtn.all": "toate",
+    "religion.transcend.confirmation.title": "Trascende?",
     "religion.transcendBtn.label": "Trascende",
     "religion.zu.unicornTomb.label": "Cimitirul de unicorni",
     "unit.hour": "ora",
+    "res.stack.buildings": "Cladiri",
     "res.stack.time": "Timp",
     "res.stack.upgrades": "Imbunatatiri",
     "reset.confirmation.msg60": "Vei primi extra fericire bonus.",
     "resources.compedium.title": "compendiu",
+    "resources.craftTable.all": "toate",
     "resources.kerosene.title": "kerosen",
+    "resources.scaffold.title": "schela",
     "resources.tears.title": "lacrimi",
+    "resources.zebras.title": "zebre",
     "science.animal.desc": "Domesticarea permite accesul la diverse resurse animalice prin intermediul pâșunii. Îmbunătățește producția ta de mâncare.",
     "science.archery.desc": "Armament cu rază lungă cunoscut ca 'Arc'.",
     "science.dimensionalPhysics.label": "Fizici dimensionale",
@@ -127,20 +137,32 @@
     "space.planet.yarn.terraformingStation.label": "Stație de Terraformare",
     "stats.buildings": "Clădirile au fost construite",
     "stats.trades.current": "Comerturi terminate",
+    "stats.trades.total": "Comerturi terminate",
+    "tab.name.time": "Timp",
+    "time.reset.title": "Resetare",
     "trade.race.zebras": "Zebre",
+    "ui.filter.all": "Toate",
+    "ui.option.language": "Limba:",
+    "left.craft": "fabricare",
+    "left.hunt": "Trimite vanatori",
+    "left.hunt.time": "timp",
+    "console.filter.craft": "Fabricare",
     "village.btn.hunters": "Trimite vanatori",
     "village.census.lbl.happiness": "Fericire",
+    "village.census.lbl.leader": "Lider",
     "village.happiness.buildings": "Cladiri",
     "village.happiness.rare.resources": "Resurse rare",
     "village.job.miner.desc": "+0.25 minerale pe secundă",
-    "village.skill.competent": "competent",
     "village.tab.title.consortium": "Consortiu",
+    "menu.language": "Limba",
     "village.surname.Chalk": "Creta",
+    "workshop.upgradePanel.label": "Imbunatatiri",
     "workshop.all.upgrades.unlocked": "Toate imbunatatirile sunt deblocate!",
     "workshop.combustionEngine.desc": "Reduce consumul de carbune al Uzinelor cu 20%",
     "workshop.craftPanel.header.freeEngineers": "Ingineri gratis",
     "workshop.crafts.scaffold.label": "Schela",
     "workshop.crafts.thorium.desc": "Combustibil extrem de reactiv și instabil",
+    "workshop.fuelInjectors.desc": "Reduce consumul de carbune al Uzinelor cu 20%",
     "workshop.ironAxes.label": "Topor de fier",
     "workshop.machineLearning.desc": "Fiecare nivel de AI Nucleu o să crească eficacitatea Centrului de Date cu 10%",
     "workshop.oilDistillation.desc": "Producția de petrol este îmbunătățită cu 75%.",
