--- a/res/i18n/crowdin/el.json
+++ b/res/i18n/crowdin/el.json
@@ -209,6 +209,7 @@
     "buildings.workshop.desc": "Παρέχει μια ποικιλία αναβαθμίσεων. Βελτιώνει την αποτελεσματικότητα των μαστορεμάτων 6%",
     "buildings.workshop.flavor": "Δωρεάν παιχνίδια για τους εργάτες",
     "buildings.zebraForge.label": "Σιδηρουργείο των Ζέβρων",
+    "buildings.zebraForge.desc": "Ξεκλειδώνει το μαστόρεμα για αιματόλιθους και τ-μίθριλ.",
     "buildings.zebraOutpost.label": "Φυλάκιο Ζέβρων",
     "buildings.zebraOutpost.desc": "Παρέχει βάση για τις αποστολές κυνηγιού. Κάθε επίπεδο αναβάθμισης βελτιώνει την αποτελεσματικότητα αποστολής 5%",
     "buildings.zebraWorkshop.label": "Βιοτεχνία Ζέβρων",
@@ -379,8 +380,11 @@
     "effectsMgr.statics.planetCracker-uraniumPerTickSpace.title": "Ραγιστής Πλανητών - Μετατροπή Ουρανίου",
     "effectsMgr.statics.reactorEnergyRatio.title": "Μπόνους ενέργειας αντιδραστή",
     "effectsMgr.statics.reactorThoriumPerTick.title": "Κατανάλωση Θορίου του αντιδραστήρα",
+    "effectsMgr.statics.relicPerDay.title": "Παραγωγή Κειμηλίων",
     "effectsMgr.statics.sattelite-observatoryRatio.title": "Κάθε Δορυφόρος δίνει μπόνους στο Αστεροσκοπείο",
     "effectsMgr.statics.scienceMaxCompendia.title": "Μέγιστο εγκυκλοπαιδικό επιστημονικό μπόνους",
+    "effectsMgr.statics.pyramidGlobalResourceRatio.title": "Αποθηκευτικός χώρος",
+    "effectsMgr.statics.pyramidFaithRatio.title": "Μπόνους Πίστης",
     "effectsMgr.statics.faithSolarRevolutionBoost.title": "Ενίσχυση Ηλιακής Επανάστασης",
     "effectsMgr.statics.spaceBeacon-starchartPerTickBaseSpace.title": "Διαστημικός Φάρος - παραγωγή αστροχαρτών",
     "effectsMgr.statics.temporalParadoxVoid.title": "Μέγιστο κενό",
@@ -392,8 +396,10 @@
     "effectsMgr.statics.coalPolicyRatio.title": "Μπόνους παραγωγής άνθρακα",
     "effectsMgr.statics.faithPolicyRatio.title": "Μπόνους παραγωγής Πίστης",
     "effectsMgr.statics.unobtainiumPolicyRatio.title": "Μπόνους παραγωγής Ανομπτένιουμ",
+    "effectsMgr.statics.culturePolicyRatio.title": "Μπόνους παραγωγής κουλτούρας",
     "effectsMgr.statics.mineralsPolicyRatio.title": "Μπόνους παραγωγής ορυκτών",
     "effectsMgr.statics.woodPolicyRatio.title": "Μπόνους παραγωγής ξύλου",
+    "menu.reset": "Επαναφορά",
     "navbar.energy": "Ενέργεια: {0}Wt",
     "opts.theme.factory": "Εργοστάσιο",
     "opts.theme.minimalist": "Μινιμαλιστής",
@@ -427,6 +433,7 @@
     "prestige.numeromancy.desc": "Ορισμένες χρόνιες θα έχουν επιπλέον επιδράσεις στα Φεστιβάλ.",
     "prestige.voidOrder.desc": "Προσθέτει 10% παραγόμενη πίστη, η οποία μετατρέπεται αυτόματα ως λατρεία.",
     "religion.adoreBtn.desc": "Μετατρέψτε όλη τη λατρεία σας σε Θεοφάνια.\nΠρώην [Επαναφορά Πίστης]",
+    "religion.btn.refine": "Διύλιση",
     "religion.faithCount.bonus": "μπόνους",
     "religion.faithCount.pool": "Λατρεία: {0}",
     "religion.adore.confirmation.msg": "Είστε βέβαιοι ότι θέλετε να μετατρέψετε όλη την Λατρεία σε Θεοφάνια;\n\nΘα πάρετε ένα μπόνους στην μετατροπή της πίστης (Δοξάστε τον Ήλιο) με βάση το συνολικό ποσό της Θεοφάνιά σας.\n\nΤα Θεοφάνια και αυτό το μπόνους, θα μεταφέται σε κάθε επαναφορά.\n\nΠΑΤΩΝΤΑΣ ΑΥΤΟ ΤΟ ΚΟΥΜΠΙ ΘΑ ΜΗΔΕΝΙΣΕΙ ΟΛΗ ΤΗΝ ΛΑΤΡΕΙΑ ΠΟΥ ΣΥΛΛΕΞΑΤΕ ΚΑΙ ΤΟ ΜΠΟΝΟΥΣ ΗΛΙΑΚΗΣ ΕΠΑΝΑΣΤΑΣΗΣ.",
@@ -438,24 +445,35 @@
     "religion.ru.solarchant.desc": "Βελτιώνει την παραγωγή πίστης 10%",
     "religion.ru.sunAltar.desc": "Κάθε ναός μπορεί να αποθηκεύσει περισσότερη πίστη. Βελτιώνει την ευτυχία 0,5%",
     "religion.sacrificeAlicornsBtn.desc": "Εξορίστε τους Πήγασους στο Ματωμένο Φεγγάρι. Θα λάβετε έναν Χρονοκρύσταλλο.",
+    "religion.sacrificeBtn.all": "όλα",
     "religion.tu.blackCore.desc": "Μεταποιήστε και φθείρετε τους νόμους της πραγματικότητας.<br>Κάθε επίπεδο Μαύρου Πυρήνα αυξάνει το όριο ΜΥΛ 1%.",
     "religion.tu.blackLibrary.desc": "Κάθε Μαύρη Βιβλιοθήκη βελτιώνει κλιμακωτά τον Κώδικα των Λεβιαθάνιων 2%. Αυτο βελτιώνεται περαιτέρω από τα νεκροταφεία των Μονόκερων.",
     "religion.tu.darkNova.desc": "Βελτιώνει την παγκόσμια παραγωγή ενέργειας 2%",
     "unit.min": "ελάχ.",
+    "unit.year": "έτος",
+    "res.stack.buildings": "Κτίρια",
     "res.stack.faith": "Πίστη",
     "res.stack.festival": "Επίδραση Κύκλου Φεστιβάλ",
+    "res.stack.necrocracy": "Μπόνους παραγωγής ΜΥΛ",
     "res.stack.reactors": "Αντιδραστήρες",
+    "res.stack.steamworks": "Ατμοβιομηχανία",
     "reset.confirmation.msgbase": "Παίρνετε μπόνους πόντους για την ευτυχία. Θα αποθηκεύσετε επίσης τα επιτεύγματά σας και μπόνους πόντους.",
     "reset.confirmation.msg60": "Θα λάβετε επιπλέον μπόνους ευτυχίας.",
     "reset.confirmation.msg70": "Θα λάβετε επιπλέον ευτυχία και μπόνους στην παραγωγή.",
     "resources.beam.title": "δοκάρι",
     "resources.coal.title": "άνθρακας",
+    "resources.craftTable.all": "όλα",
+    "resources.culture.title": "κουλτούρα",
     "resources.eludium.title": "ελούδιουμ",
     "resources.faith.title": "πίστη",
+    "resources.karma.title": "κάρμα",
+    "resources.kittens.title": "γατάκια",
     "resources.minerals.title": "ορυκτά",
+    "resources.science.title": "επιστήμη",
     "resources.unobtainium.title": "ανομπτένιουμ",
     "resources.wood.title": "ξύλο",
     "resources.worship.title": "λατρεία",
+    "resources.zebras.title": "ζέβρες",
     "science.advExogeology.desc": "Προηγμένες Εξωγεολογικές μελέτες. Νέες μέθοδοι επεξεργασίας του Ανομπτένιουμ",
     "science.advExogeology.effectDesc": "Ξεκλειδώνει το Ελούδιουμ και αναβαθμίσεις του",
     "science.ai.desc": "Η τεχνητή νοημοσύνη είναι μια προσπάθεια να δημιουργηθεί μηχανή ικανή, να συλλογιστεί και να εκτελέσει γνωστικές εργασίες.",
@@ -488,6 +506,7 @@
     "science.theology.flavor": "Τι είναι αυτή η φλεγόμενη μπάλα στον ουρανό βρε παιδιά;",
     "science.thorium.desc": "Το θόριο είναι ένα εξαιρετικά ραδιενεργό και ενεργειακά αποδοτικό ισότοπο που μπορεί να χρησιμοποιηθεί σε διάφορες τεχνολογίες.",
     "science.writing.desc": "Η γραφή είναι η τέχνη της καταγραφής πληροφοριών. Η γραφή μπορεί να επηρεάσει τη γενική ευτυχία και την πολιτιστική πρόοδο του πολιτισμού σας.",
+    "space.mission.name.complete": "{0} (ολοκληρωμένο)",
     "space.moonMission.label": "Αποστολή στο Φεγγάρι",
     "space.moonMission.desc": "Εκτοξεύστε πύραυλο στο Κόκκινο Φεγγάρι, δορυφόρο του Γαθ",
     "space.planet.cath.sattelite.desc": "Φτιάξτε ένα δορυφόρο. Οι δορυφόροι βελτιώνουν την αποτελεσματικότητα του Αστεροσκοπείου 5% και παράγουν αστροχάρτες",
@@ -507,27 +526,39 @@
     "space.planet.yarn.terraformingStation.label": "Σταθμός Εδαφομορφοποίησης",
     "space.terminusMission.label": "Αποστολή Μείον-Δ",
     "space.terminusMission.desc": "Ο Τέρμινους είναι ένας γίγαντας πάγου στο άκρο του ηλιακού συστήματος Χίλιος.",
+    "tab.name.challenges": "Προκλήσεις",
+    "tab.name.science": "Επιστήμη",
+    "tab.name.trade": "Ανταλλαγή",
     "tab.name.workshop": "Βιοτεχνία",
     "time.cfu.blastFurnace.desc": "Λειτουργεί με χρονοθερμότητα. Αυξάνει το μέγιστο όριο θερμότητας κατά 100.",
     "time.cfu.temporalBattery.desc": "Βελτιώνει την ικανότητα ροής ενέργειας 25%",
+    "time.fixCryochambers.label": "Επισκευή Κρυοθαλάμου",
+    "time.reset.title": "Επαναφορά",
     "time.shatter.tc.desc": "Καταστρέψτε χρονοκρυστάλλους και απελευθερώστε την αποθηκευμένη ενέργεια χρόνου.<br> Θα μεταφερθείτε ένα χρόνο στο μέλλον. Η τιμή μπορεί να αυξηθεί με την πάροδο του χρόνου.",
     "time.tc.shatter": "Απελευθερώθηκε ενέργεια χρόνου, παραλείφθηκαν {0} χρόνια",
     "time.tc.shatterOne": "Απελευθερώθηκε ενέργεια χρόνου, παραλείφθηκε ένας χρόνος",
     "time.vsu.voidHoover.desc": "Αυξήστε το μέγιστο κενό που αποκτάται ανά ημέρα κατά τη διάρκεια του Χρονικού Παράδοξου",
     "time.vsu.voidRift.desc": "Αύξηση του μέγιστου αποθηκευτικού χώρου 2%",
+    "trade.race.zebras": "Ζέβρες",
     "trade.leviathans.energy": "Ενέργεια: ",
     "trade.embassy.desc": "Βελτιώστε τις διπλωματικές σας σχέσεις εγκαθιδρύοντας μία πρεσβεία",
     "trade.embassy.pinned": "Καρφιτσωμένο",
     "trade.embassy.unpinned": "Ξεκαρφιτσωμένο",
+    "ui.filter.all": "Όλα",
     "ui.energy.tooltip": "Ενέργεια",
     "ui.option.show.non.applicable.buttons": "Να εμφανίζονται πάντα τα κουμπιά Φεστιβάλ/Ανταλλαγής/Θυσίας/Θραύσης ακόμη και αν δεν είναι εφαρμόσιμα",
     "ui.option.iw.smelter": "Τα χυτήρια σβήνουν στο 95% πληρότητας Σιδήρου σε λειτουργία Σ. Θ.",
+    "left.resources": "πόροι",
+    "left.craft": "μαστορέψτε",
+    "console.filter.trade": "Ανταλλαγή",
+    "console.filter.craft": "Μαστορέψτε",
     "console.filter.workshopAutomation": "Αυτοματισμός Βιοτεχνίας",
     "console.filter.faith": "Πίστη",
     "village.btn.festival": "Διοργάνωση Φεστιβάλ",
     "village.btn.festival.desc": "Διοργανώστε ένα πολιτιστικό φεστιβάλ.(+30% στην ευτυχία και διπλή παραγωγή για ένα χρόνο)",
     "village.census.lbl.festival.duration": "Διάρκεια Φεστιβάλ",
     "village.census.lbl.happiness": "Ευτυχία",
+    "village.census.lbl.leader": "Ηγέτης",
     "village.festival.msg.start": "Το πολιτιστικό Φεστιβάλ ξεκίνησε",
     "village.festival.msg.ext": "Το πολιτιστικό Φεστιβάλ επεκτάθηκε",
     "village.happiness.base": "Βάση",
@@ -548,12 +579,15 @@
     "village.job.priest.desc": "+0.0075 πίστη ανά δευτερόλεπτο",
     "village.job.woodcutter": "Ξυλοκόπος",
     "village.job.woodcutter.desc": "+0,09 ξύλο ανά δευτ.",
+    "village.msg.kittens": "γατάκια",
     "village.panel.management.desc": "Η ευτυχία επηρεάζει την παραγωγή και την κατανάλωση του γατόχορτου.<br>Οι σπάνιοι πόροι θα αυξήσουν αυτήν την αξία ενώ ο υπερπληθυσμός θα τη μειώσει",
     "village.tab.title.dominion": "Κυριαρχία",
+    "res.per.year": "έτος",
     "effectsMgr.workshop.eludiumAutomationBonus.title": "Μπόνους Αυτοματισμού Ελούδιουμ",
     "effectsMgr.heatMax.title": "Μέγιστη Θερμότητα",
     "workshop.advancedAutomation.desc": "Ο Αυτοματισμός βιοτεχνίας θα ενεργοποιείται δύο φορές το χρόνο.",
     "workshop.alloyAxe.desc": "Όσο περισσότερο τα χρησιμοποιείτε, τόσο πιο αιχμηρά είναι! Οι ξυλοκόποι είναι 50% πιο αποτελεσματικοί.",
+    "workshop.alloySaw.desc": "Βελτίωση του Πριονιστηρίου 15%",
     "workshop.amBases.desc": "Μείωση της κατανάλωσης ενέργειας για τις Βάσεις Φεγγαριού 50%",
     "workshop.amFission.desc": "Οι μηχανικοί είναι 25% πιο αποτελεσματικοί στην παραγωγή του Ελούδιουμ",
     "workshop.amReactors.label": "Αντιδραστήρες Αντιύλης",
@@ -569,6 +603,7 @@
     "workshop.coalFurnace.flavor": "Τόσο ζεστά... Με κοιμίζει...",
     "workshop.coldFusion.label": "Ψυχρή Σύντηξη",
     "workshop.combustionEngine.desc": "Μείωσή κατανάλωσης άνθρακα των ατμοβιομηχανιών 20%",
+    "workshop.concreteHuts.desc": "Μείωση της τιμής των καλυβών 30%",
     "workshop.craftPanel.header.tooltip": "Μία θέση μηχανικού ανά εργοστάσιο.<br>Κάθε μηχανικός μπορεί να ανατεθεί στο \nμαστόρεμα που θα εκτελέσει αυτόματα.",
     "workshop.crafts.beam.label": "Ξύλινα Δοκάρια",
     "workshop.crafts.beam.desc": "Απλή δομή στήριξης από ξύλο. Απαιτείται για προηγμένες κατασκευές.",
@@ -607,7 +642,9 @@
     "workshop.fuelInjectors.desc": "Μείωσή κατανάλωσης άνθρακα των ατμοβιομηχανιών 20%",
     "workshop.hydroPlantTurbines.desc": "Τουρμπίνες από Ανομπτένιουμ. 15% πιο αποτελεσματικές Υδροηλεκτρικές μονάδες.",
     "workshop.ironAxes.desc": "Οι Ξυλοκόποι είναι 50% πιο αποτελεσματικοί",
+    "workshop.ironHoes.desc": "Οι Αγρότες είναι 30% πιο αποτελεσματικοί",
     "workshop.ironwood.label": "Σιδερένιες Καλύβες",
+    "workshop.ironwood.desc": "Μείωση της τιμής των καλυβών 50%",
     "workshop.lhc.desc": "Κάθε Επιταχυντής θα παρέχει μπόνους στη μέγιστη επιστήμη",
     "workshop.mWReactor.label": "Αντιδραστήρες Μικροπαραμόρφωσης",
     "workshop.mWReactor.desc": "Ένας νέος αντιδραστήρας με βάση το Ελούδιουμ για τα Σεληνιακά Φυλάκια. 75% πιο αποτελεσματική παραγωγή Ελούδιουμ.",
@@ -622,14 +659,18 @@
     "workshop.reactorVessel.label": "Πλοίο Αντιδραστήρα",
     "workshop.reactorVessel.desc": "Κάθε αντιδραστήρας βελτιώνει το δυναμικό του πλοίου 5%",
     "workshop.reinforcedBarns.desc": "80% περισσότερος αποθηκευτικός χώρος ξύλο και σίδερο",
+    "workshop.reinforcedSaw.desc": "Βελτίωση του Πριονιστηρίου 20%",
     "workshop.relicStation.desc": "Προσθέστε στους Φάρους Διαστήματος ερευνητικούς σταθμούς Κειμηλίων. Κάθε Φάρος Διαστήματος παράγει 0,01 Κειμήλια την ημέρα",
+    "workshop.spaceEngineers.desc": "Βελτιώνει την αποτελεσματικότητα του Μηχανικού",
     "workshop.steelAxe.desc": "Πολύ αιχμηρά και ανθεκτικά τσεκούρια. 50% αποτελεσματικότεροι Ξυλοκόποι",
+    "workshop.steelSaw.desc": "Βελτίωση του Πριονιστηρίου 20%",
     "workshop.stoneBarns.desc": "75% περισσότερος αποθηκευτικός χώρος για ξύλο και σίδερο",
     "workshop.thoriumReactors.label": "Αντιδραστήρες Θορίου",
     "workshop.thoriumReactors.desc": "Αύξηση της παραγωγής ενέργειας 25% με την προσθήκη Θορίου",
     "workshop.titaniumAxe.label": "Τσεκούρι Τιτανίου",
     "workshop.titaniumAxe.desc": "Άφθαρτα τσεκούρια. Οι ξυλοκόποι είναι 50% αποτελεσματικότεροι.",
     "workshop.titaniumMirrors.desc": "Βελτιωμένα τηλεσκόπια. Κάθε Αστεροσκοπείο θα δώσει επιπλέον 2% στην αποτελεσματικότητα των Βιβλιοθηκών/Κέντρων Δεδομένων.",
+    "workshop.titaniumSaw.desc": "Βελτίωση του Πριονιστηρίου 15%",
     "workshop.unobtainiumAxe.label": "Ανομπτένιουμ Τσεκούρι",
     "workshop.unobtainiumAxe.desc": "Αυτά τα τσεκούρια είναι κυριολεκτικά δυσεύρετα! 50% πιο αποτελεσματικοί Ξυλοκόποι.",
     "workshop.unobtainiumDrill.label": "Ανομπτένιουμ Τρυπάνι",
