--- a/res/i18n/crowdin/he.json
+++ b/res/i18n/crowdin/he.json
@@ -208,6 +208,7 @@
     "buildings.workshop.desc": "מספק מגוון רחב של שדרוגים. משפר יעילות מלאכה ב6%",
     "buildings.workshop.flavor": "צעצועים בחינם לעובדים",
     "buildings.zebraForge.label": "מפחת זברות",
+    "buildings.zebraForge.desc": "מאפשר יצירת אבני דם וט-מיתריל.",
     "buildings.zebraOutpost.label": "מוצב זברות",
     "buildings.zebraOutpost.desc": "משמש כבסיס למשלחות ציד. כל שלב משפר את יעילות המשלחת ב5%",
     "buildings.zebraWorkshop.label": "סדנת זברות",
@@ -347,6 +348,7 @@
     "effectsMgr.statics.rankLeaderBonusConversion.title": "ייצור המרה עבור כל רמת מנהיגתלתול",
     "effectsMgr.statics.reactorThoriumPerTick.title": "צריכת כורים של תוריום",
     "effectsMgr.statics.refineRatio.title": "הטבת זיקוק נפית",
+    "effectsMgr.statics.relicPerDay.title": "ייצור שרידים",
     "effectsMgr.statics.resStasisRatio.title": "יחס קיפאון משאבי",
     "effectsMgr.statics.researchVessel-starchartPerTickBaseSpace.title": "חללית חקר - ייצור מפות כוכבים",
     "effectsMgr.statics.riftChance.title": "סיכוי לקרע חד קרן",
@@ -354,6 +356,7 @@
     "effectsMgr.statics.sattelite-starchartPerTickBaseSpace.title": "חללית - ייצור מפות כוכבים",
     "effectsMgr.statics.shipLimit.title": "השפעת הגבלת ספינות",
     "effectsMgr.statics.skillMultiplier.title": "השפעת היכולת של חתלתול",
+    "effectsMgr.statics.pyramidGlobalResourceRatio.title": "אחסון",
     "effectsMgr.statics.spaceBeacon-starchartPerTickBaseSpace.title": "משואת חלל - ייצור מפות כוכבים",
     "effectsMgr.statics.starchartGlobalRatio.title": "תוספת מפות כוכבים",
     "effectsMgr.statics.tcRefineRatio.title": "הטבת הקרבת מכונפי קרן",
@@ -399,6 +402,7 @@
     "opts.highlight.desc": "המשחק ידגיש באדום את הבניינים המוגבלים על ידי שטח האחסון.",
     "opts.lang": "שפה",
     "opts.percentage.desc": "המשחק ישתמש ב-% מערכי המשאבים הכלליים, אחרת בערכים לשנייה.",
+    "opts.theme.factory": "מפעל",
     "opts.theme.gold": "זהב",
     "opts.theme.unicorn": "חד קרן",
     "opts.theme.wood": "עץ",
@@ -441,6 +445,7 @@
     "prestige.zebraDiplomacy.desc": "מספר זברות ציידות ישארו בכפר. (יש צורך קודם לפתוח זברות ציידות על מנת להשתמש בשדרוג זה).",
     "religion.adoreBtn.label": "הערץ את הגלקסיה",
     "religion.adoreBtn.desc": "ממיר את כל השבח לגילוי.\nלשעבר [אתחול אמונה]",
+    "religion.btn.refine": "זקק",
     "religion.faithCount.pool": "שבח: {0}",
     "religion.adore.confirmation.msg": "האם אתה בטוח שתרצה להפוך את כל השבח לגילוי?\n\nאתה תשיג תוספת להמרת אמונה (הלל את השמש) כתלות בכמות הגילוי הכללית.\n\nגילוי ותוספת זו תעבור בין אתחולים.\n\n*לחיצה על כפתור זה תמחק את כל השבח ותאפס את תוספת הייצור של מהפכת השמש*.",
     "religion.msg.corruption": "מכונפי הקרן שלך הושחטו על ידי הסימונים!",
@@ -458,6 +463,7 @@
     "religion.sacrificeAlicornsBtn.label": "הקרב מכונפי קרן",
     "religion.sacrificeAlicornsBtn.desc": "סלק את מכונפי הקרן לירח הדם. תקבל גביש זמן.",
     "religion.sacrificeAlicornsBtn.sacrifice.msg": "סולקו {0} מכונפי קרן. השגת {1} גביש(י) זמן!",
+    "religion.sacrificeBtn.all": "הכל",
     "religion.sacrificeBtn.label": "הקרב חדי קרן",
     "religion.sacrificeBtn.desc": "מחזיר חדי קרן למימד חדי הקרן. תקבל דמעת חד קרן אחת עבור כל זיקורת שברשותך.",
     "religion.sacrificeBtn.sacrifice.msg": "הוקרבו {0} חדי קרן. השגת {1} דמעות חדי קרן!",
@@ -477,9 +483,11 @@
     "religion.zu.unicornTomb.desc": "משפר את ייצור חדי הקרן ב-5%",
     "religion.zu.unicornUtopia.label": "אוטופיית חדי קרן",
     "religion.zu.unicornUtopia.desc": "משפר את יצירת חדי הקרן ב-250%. מעלה את הסיכוי לזימון מכונפי קרן. משפר יחס זיקוק ג\"ז ב-5%",
+    "unit.year": "שנה",
     "res.stack.buildings": "בניינים",
     "res.stack.necrocracy": "הטבת ייצור צנ\"ש",
     "res.stack.rankLeaderBonusConversion": "הטבת המרת מנהיגתלתול",
+    "res.stack.steamworks": "מכונת קיטור",
     "res.stack.village": "(3:) כפר",
     "resources.alicorn.title": "מכונפי קרן",
     "resources.bloodstone.title": "אבן דם",
@@ -487,14 +495,18 @@
     "resources.catnip.title": "נפית",
     "resources.compedium.title": "אנציקלופדיה",
     "resources.concrate.title": "בטון",
+    "resources.craftTable.all": "הכל",
+    "resources.culture.title": "תרבות",
     "resources.eludium.title": "חמקמקודיום",
     "resources.gold.title": "זהב",
+    "resources.karma.title": "קארמה",
     "resources.kerosene.title": "קרוסן",
     "resources.kittens.title": "חתלתולים",
     "resources.manuscript.title": "כתב יד",
     "resources.necrocorn.title": "אלמת קרן",
     "resources.parchment.title": "מגילה",
     "resources.scaffold.title": "פיגום",
+    "resources.science.title": "מדע",
     "resources.ship.title": "ספינה",
     "resources.starchart.title": "מפת כוכבים",
     "resources.steel.title": "פלדה",
@@ -510,6 +522,7 @@
     "resources.wood.title": "עץ",
     "resources.worship.title": "שבח",
     "resources.epiphany.title": "גילוי",
+    "resources.zebras.title": "זברות",
     "resources.sorrow.full": "צער נוזלי שחור",
     "resources.sorrow.short": "צנ\"ש",
     "science.advExogeology.effectDesc": "מאפשר חמקמקודיום ושדרוגי חמקמקודיום",
@@ -547,6 +560,7 @@
     "science.thorium.desc": "תוריום הוא איזוטופ מאוד רדיואקטיבי ויעיל באנרגיה שניתן לשימוש במגוון שדרוגים בעידן החלל.",
     "science.thorium.effectDesc": "מאפשר כורי תוריום ומנוע תוריום",
     "science.voidSpace.effectDesc": "מאפשר תאי קריו",
+    "space.mission.name.complete": "{0} (הושלמו)",
     "space.planet.cath.sattelite.desc": "פריסת לווין. לווינים משפרים ב-5% את יעילות המצפים ומייצרים מפות כוכבים",
     "space.planet.yarn.hydroponics.desc": "מערכת הידרופונית אוטומטית חדישה. מעלה את תקרת הנפית ב-10%. משפר את ייצור הנפית ב-2.5%",
     "stats.buildings": "בניינים שנבנו",
@@ -557,6 +571,8 @@
     "stats.trades.current": "סחר שהושלם",
     "stats.trades.total": "סחר שהושלם",
     "stats.unicorns": "חדי קרן שהוקרבו",
+    "tab.name.challenges": "אתגרים",
+    "tab.name.science": "מדע",
     "tab.name.trade": "סחר",
     "tab.name.workshop": "סדנא",
     "time.cfu.temporalBattery.desc": "משפר את קיבולת אנרגיית השצף ב-25%",
@@ -566,6 +582,7 @@
     "time.flux": "שצף זמן",
     "time.flux.desc": "שצף זמן יוכל להתחדש לאורך זמן כאשר דף המשחק סגור",
     "time.redshift.temporalFlux": "הטענת מחדש {0} שניות של שצף זמן",
+    "time.reset.title": "אתחל",
     "time.shatter.tc.desc": "השמד גבישי זמן ושחרר את כוחות הזמן המאוכסנים.<br>קפוץ שנה אחת לעתיד. המחיר יכול לעלות עם הזמן.",
     "time.vsu.cryochambers.label": "תא קריו",
     "time.vsu.cryochambers.desc": "ישמן חתלתול אחד לאחר האתחול.<br>ניתן להחזיק בתא קריו אחד עבור כל ספירת זמן",
@@ -611,10 +628,13 @@
     "trade.leviathans.energy": "אנרגיה: ",
     "trade.send.caravan.desc": "סחור חלק מדבריך עבור המשאבים המוצאים. מחירים עלולים להשתנות מעונה לעונה.<br>יש סיכוי קטן לקבל משאבים נדירים.",
     "trade.embassy.desc": "משפר את היחסים הדיפלומטיים על ידי בניית שגרירות",
+    "ui.filter.all": "הכל",
+    "ui.kgnet.save.save": "שמור",
     "ui.loading.msg.1": "מכייל זיקורתים",
     "ui.loading.msg.2": "זורע נפית",
     "ui.loading.msg.3": "מאלף חדי קרן",
     "ui.energy.tooltip": "אנרגיה",
+    "ui.close": "סגור",
     "ui.option.language": "שפה:",
     "ui.option.language.add": "הוסף תרגום",
     "ui.option.language.apply": "החל שינויים",
@@ -622,10 +642,23 @@
     "ui.option.show.non.applicable.buttons": "תמיד הראה כפתורי חגיגה/סחר/הקרבה/שבירה גם אם אינם ישימים",
     "ui.option.use.percentage.consumption.values": "השתמש באחוזים עבור כפתורי יצירה/סחר/הקרבה",
     "ui.option.highlight.unavailable": "הדגש בניינים המוגבלים על ידי שטח אחסון",
+    "ui.option.export.button": "יצא",
+    "ui.option.import.button": "ייבוא",
+    "ui.option.export": "יצא ל:",
+    "ui.option.export.dropbox": "Dropbox (ניסיוני)",
+    "ui.option.export.text": "יצא לטקסט:",
+    "ui.option.close.button": "סגור",
+    "ui.option.import.from.dropbox": "Dropbox (ניסיוני)",
+    "ui.option.import.from.text": "ייבוא מטקסט:",
+    "ui.option.do.import.button": "ייבוא",
     "ui.option.app.text": "משחקתלתול לנייד שוחרר! לחץ על הקישור כדי לעקוב:",
+    "left.resources": "משאבים",
+    "left.craft": "צור",
     "left.trade.do": "סחור עם {0}",
+    "left.hunt": "שלח ציידים",
     "left.praise": "הללו את השמש!",
     "console.filter.trade": "סחר",
+    "console.filter.craft": "צור",
     "console.filter.workshopAutomation": "אוטומציית סדנה",
     "console.filter.unicornRift": "קרעי חדי קרן",
     "console.filter.alicornRift": "קרעי מכונפי קרן",
@@ -723,6 +756,7 @@
     "village.trait.scientist": "מדען",
     "village.trait.wise": "פילוסוף",
     "workshop.refine.confirmation": "החתלתולים שלך *ימותו*",
+    "res.per.year": "שנה",
     "menu.language": "שפה",
     "about.title": "משחקתלתול מ- Nuclear Unicorn",
     "btn.praise": "הלל",
@@ -759,6 +793,10 @@
     "workshop.advancedAutomation.desc": "אוטומציה לסדנה תפעל פעמיים בשנה.",
     "workshop.advancedRefinement.label": "העשרת נפית",
     "workshop.advancedRefinement.desc": "נפית מזדקקת ביעילות כפולה",
+    "workshop.alloyArmor.desc": "ציידים יהיו קצת יותר יעילים",
+    "workshop.alloyBarns.desc": "למקומות אחסון יהיה מקום לכפליים המשאבים",
+    "workshop.alloySaw.desc": "משפר את יעילות המנסרה ב-15%",
+    "workshop.alloyWarehouses.desc": "למקומות אחסון מקום ל-45% יותר משאבים",
     "workshop.amFission.desc": "מהנדסים הם 25% יעילים יותר בייצור חמקמקודיום",
     "workshop.assistance.desc": "רובוטי במפעל עושים פעולות שגרתיות. עובדים צורכים פחות נפית.",
     "workshop.astrophysicists.desc": "כל מלומד עכשיו ייצר מפות כוכבים.",
@@ -834,6 +872,8 @@
     "workshop.reactorVessel.desc": "כל כור משפר את פוטנציאל הספינות ב-5%",
     "workshop.refrigeration.desc": "מגדיל תקרת נפית ב-75%",
     "workshop.register.desc": "מנהיגתלתול ינהל עבודות לפי ניסיון.",
+    "workshop.reinforcedSaw.desc": "משפר את יעילות המנסרה ב-20%",
+    "workshop.reinforcedWarehouses.desc": "למקומות אחסון מקום ל-25% יותר משאבים",
     "workshop.rotaryKiln.desc": "קלצינרים יהיו 75% יותר יעילים בהפקת ברזל ופי שלוש בייצור טיטניום",
     "workshop.satnav.desc": "כל לווין מוריד את עלות מפות הכוכבים של ספינות ב-1.25%",
     "workshop.silos.desc": "מחסנים יוכלו כעת לאחסן נפית",
@@ -847,6 +887,7 @@
     "workshop.steelPlants.desc": "10% מתוצר הברזל של קלצינרים יומרו לפלדה",
     "workshop.steelSaw.label": "מסור פלדה",
     "workshop.steelSaw.desc": "משפר את יעילות המנסרה ב-20%",
+    "workshop.storageBunkers.desc": "למקומות אחסון מקום ל-20% יותר משאבים",
     "workshop.strenghtenBuild.label": "עמודי בטון",
     "workshop.strenghtenBuild.desc": "תקן סדקים באסמים ומחסנים באמצעות בטון.",
     "workshop.thoriumEngine.label": "מנוע תוריום",
