--- a/res/i18n/crowdin/es.json
+++ b/res/i18n/crowdin/es.json
@@ -832,7 +832,6 @@
     "prestige.voidOrder.desc": "Agrega 10% de fe producida, que se acumula automáticamente.",
     "prestige.willenfluff.label": "Venus de Willenfluff",
     "prestige.willenfluff.desc": "Los gatitos llegarán un 75% más rápido",
-    "prestige.yesod.label": "Yesod",
     "prestige.yesod.desc": "Mejora el efecto de paralaje y la escala en un 5%",
     "prestige.zebraCovenant.label": "Pacto Zebra",
     "prestige.zebraCovenant.desc": "Más Zebras se quedarán contigo",
@@ -908,6 +907,7 @@
     "religion.tu.blackCore.flavor": "Construido con los huesos de los sacrificios de gatitos",
     "religion.tu.blackLibrary.label": "Biblioteca Negra",
     "religion.tu.blackLibrary.desc": "Cada Biblioteca Negra mejora la escala de Códices Leviatán en un 2%. Este valor es mejorado aún más por los Cementerios de Unicornios.",
+    "religion.tu.blackLibrary.flavor": "Tal vez sea demasiado oscuro para leer a propósito.",
     "religion.tu.blackNexus.label": "Nexo Oscuro",
     "religion.tu.blackNexus.desc": "Mejora la velocidad con la que se refinan los cristales de tiempo en reliquias. <br /> Cada Nexo Oscuro aumentará su eficacia de Refinar Reliquias por el número de Pirámide Negra. <br> Este efecto también aumenta la efectividad de Estaciones de Reliquias ",
     "religion.tu.blackNexus.flavor": "Ojo en el cielo",
@@ -988,6 +988,7 @@
     "res.stack.expansionism": "Bono de cosmoliberalismo",
     "res.stack.extermination": "Pactos",
     "res.stack.faith": "Fe",
+    "res.stack.holyGenocide": "Santo Genocidio",
     "res.stack.solarRevolution": "Revolución solar",
     "res.stack.festival": "Efecto Ciclo Festival",
     "res.stack.knowledgeShared": "Compartir conocimientos",
@@ -1085,6 +1086,7 @@
     "resources.zebras.title": "Zebras",
     "resources.sorrow.full": "Tristeza líquida negra",
     "resources.sorrow.short": "TLN",
+    "gift.repaired": "Los Dioses Antiguos han reparado tu caja de regalo",
     "gift.resources": "¡Obtuviste {0} {1}!",
     "gift.apocrypha": "Bono de Apócrifos incrementado en un {0}%!",
     "gift.transcendence": "¡Nivel de Transcendencia incrementado en 4!",
@@ -1256,7 +1258,7 @@
     "science.physics.desc": "La física es un estudio de las leyes de la naturaleza. Principalmente mejora la eficacia de su maquinaria",
     "science.physics.effectDesc": "Desbloquea algunas actualizaciones útiles.",
     "science.quantumCryptography.label": "Criptografía cuántica",
-    "science.quantumCryptography.desc": "TBD",
+    "science.quantumCryptography.desc": "Por definir",
     "science.quantumCryptography.effectDesc": "Por definir",
     "science.robotics.label": "Robótica",
     "science.robotics.desc": "La robótica mejora las estructuras automatizadas como Calcinadores",
@@ -1349,7 +1351,6 @@
     "space.planet.helios.sunforge.desc": "Usa el calor del sol para fundir materiales en plasma supercondensado. Cada nivel de Sunforge mejora el espacio de almacenamiento de sus metales base en un 1%",
     "space.planet.helios.sunlifter.label": "Amplificador Solar",
     "space.planet.helios.sunlifter.desc": "Genera antimateria una vez al año. Inactivo si la producción de energía es negativa",
-    "space.planet.kairo.label": "Kairo",
     "space.planet.kairo.spaceBeacon.label": "Faro Espacial",
     "space.planet.kairo.spaceBeacon.desc": "Una estación espacial AM utilizada para la investigación y la navegación interestelar.",
     "space.planet.moon.label": "Redmoon",
@@ -1523,6 +1524,7 @@
     "ui.filter.enabled": "Habilitado",
     "ui.filter.togglable": "Conmutable",
     "ui.kgnet.login": "> Iniciar Sesión <",
+    "ui.kgnet.save.save": "Guardar",
     "ui.toggle.researched": "Alternar investigado",
     "ui.loading.msg.0": "Alimentación de cebras",
     "ui.loading.msg.1": "Calibrando zigurats",
@@ -1660,7 +1662,6 @@
     "village.happiness.buildings": "Edificios",
     "village.happiness.challenges": "Desafíos",
     "village.happiness.environment": "Efecto del medio ambiente",
-    "village.happiness.festival": "Festival",
     "village.happiness.karma": "Karma",
     "village.happiness.overpopulation": "Superpoblación",
     "village.happiness.penalty": "Pena de población",
@@ -2078,7 +2079,6 @@
     "workshop.satnav.desc": "Todos los satélites reducen el requisito del Mapa Estelar de los buques en un 1,25%",
     "workshop.seti.label": "SETI",
     "workshop.seti.desc": "Una gran variedad de telescopios electrónicos. Hace que los eventos astronómicos sean automáticos y silenciosos",
-    "workshop.silos.label": "Silos",
     "workshop.silos.desc": "Los almacenes ahora pueden almacenar catnip",
     "workshop.silos.flavor": "Con alfombras y escalada, por supuesto",
     "workshop.solarSatellites.label": "Satélites solares",
