--- a/res/i18n/crowdin/fro.json
+++ b/res/i18n/crowdin/fro.json
@@ -63,22 +63,35 @@
     "kittens.craft.confirmation.msg": "Vostre chastons vont PÉRIR",
     "menu.close": "Clore",
     "navbar.observe": "Observer cyel",
+    "opts.theme.factory": "Usyne",
     "opts.theme.oil": "Huyle",
     "opts.theme.wood": "Bois",
+    "religion.sacrificeBtn.all": "tovs",
     "res.stack.faith": "Foy",
+    "resources.craftTable.all": "tovs",
     "resources.culture.title": "cvltvre",
     "resources.faith.title": "foy",
     "resources.iron.title": "fer",
     "resources.kittens.title": "chastons",
+    "resources.oil.title": "huyle",
+    "resources.science.title": "science",
     "resources.wood.title": "bois",
     "science.agriculture.label": "Agricvltvre",
     "science.calendar.label": "Calendrier",
     "science.chemistry.label": "Alchimie",
     "stats.kittens.dead": "Chastons occis",
+    "tab.name.science": "Science",
     "trade.msg.elders.departed": "A kitten has joined your village",
+    "ui.filter.all": "Tovs",
+    "ui.close": "clore",
+    "ui.option.close.button": "Clore",
+    "left.resources": "ressovrces",
+    "left.craft": "fabriqver",
+    "console.filter.craft": "Fabriqver",
     "console.filter.faith": "Foy",
     "village.job.woodcutter": "Bvcheron",
     "village.msg.kitten": "chaston",
     "village.msg.kittens": "chastons",
+    "workshop.refine.confirmation": "Vostre chastons vont PÉRIR",
     "workshop.titaniumMirrors.flavor": "Ceste lvevr est elle en movance ?"
 }
