--- a/res/i18n/crowdin/ko.json
+++ b/res/i18n/crowdin/ko.json
@@ -132,6 +132,7 @@
     "buildings.broadcasttower.desc": "문화와 행복을 만듭니다. 에너지 생산량이 높을 때 더 효과적입니다.",
     "buildings.calciner.label": "하소로",
     "buildings.calciner.desc": "매우 효율적인 금속 공급원입니다. 틱당 1.5의 광물과 0.02의 석유를 사용하여 철과 약간의 티타늄을 생산합니다.",
+    "buildings.calciner.desc.automation": "자동으로 {0}%의 철을 강철로 변환했습니다.",
     "buildings.chapel.label": "예배당",
     "buildings.chapel.desc": "틱마다 약간의 문화와 신앙을 만들어냅니다. 종교 업그레이드로 개선할 수 있습니다.",
     "buildings.chronosphere.label": "크로노스피어",
@@ -140,6 +141,7 @@
     "buildings.dataCenter.desc": "도감이 과학력 최대치에 주는 효과가 증가합니다.",
     "buildings.factory.label": "공장",
     "buildings.factory.desc": "제작 효율을 증가시킵니다",
+    "buildings.factory.desc.automation": "자동화가 공기 오염을 정화합니다.",
     "buildings.field.label": "캣닙 밭",
     "buildings.field.desc": "마을에서 키울 캣닙을 심습니다. 밭은 봄에 +50%, 겨울에 -75%의 생산량을 지닙니다.",
     "buildings.field.flavor": "캣닙 천국이다냥!",
@@ -179,6 +181,7 @@
     "buildings.observatory.flavor": "언젠가는 그 빨간 불빛 요정을 잡을 수 있기를",
     "buildings.oilWell.label": "석유 유정",
     "buildings.oilWell.desc": "약간의 석유를 생산, 석유 최대치 +1500",
+    "buildings.oilWell.desc.automation": "자동화가 더 많은 석유 생산을 위해 에너지를 소모합니다.",
     "buildings.oilWell.flavor": "일찍 일어나는 고양이가 기름떡을 먹는 법이지.",
     "buildings.pasture.label": "목장",
     "buildings.pasture.desc": "대체식량을 제공해 캣닙 소비량을 감소시킵니다.",
@@ -188,6 +191,7 @@
     "buildings.quarry.flavor": "풀이 가득하네! 어라, 채석장이 아니라 '채소짱'이잖아",
     "buildings.reactor.label": "반응로",
     "buildings.reactor.desc": "가동되는 동안 생산량 5% 증가 효과를 제공합니다. 작동하려면 우라늄이 필요합니다.",
+    "buildings.reactor.desc.automation": "자동화가 더 많은 에너지 생산을 위해 토륨을 소모합니다.",
     "buildings.reactor.flavor": "형광 쥐들은 잡기가 훨씬 쉽지!",
     "buildings.refineCatnip.label": "캣닙 정제",
     "buildings.refineCatnip.desc": "캣닙을 목재로 정제합니다.",
@@ -196,8 +200,12 @@
     "buildings.smelter.flavor": "수염 조심해!",
     "buildings.solarfarm.label": "태양광 발전기",
     "buildings.solarfarm.desc": "계절에 따라 추가로 에너지원을 제공합니다.",
+    "buildings.spaceport.label": "우주공항",
+    "buildings.spaceport.desc": "우주 건물의 자원 저장량을 늘립니다. 과학, 반물질 저장량에는 영향을 주지 않습니다.",
+    "buildings.spaceport.flavor": "하, 얀에서 가져온 하얀 실 갖고 싶어",
     "buildings.steamworks.label": "증기 기관",
     "buildings.steamworks.desc": "활성화되면 석탄 생산이 크게 줄어듭니다. 기본적으론 쓸모가 없지만, 업그레이드하면 여러가지 멋진 일들을 할 수 있습니다.",
+    "buildings.steamworks.desc.automation": "자동화가 특정 자원들이 한계에 달했을 때 자동으로 재료를 제작합니다.",
     "buildings.steamworks.flavor": "여기서 난 잠만 자도 일하는 듯이 보인다",
     "buildings.brewery.label": "양조장",
     "buildings.brewery.desc": "캣닙으로 독한 술을 빚습니다. 축제의 효과를 강화합니다.",
@@ -265,6 +273,10 @@
     "calendar.year.ext": "{0} 년 - {1}",
     "calendar.year.full": "{0} 년 - {1}, {2} 일",
     "calendar.year.tooltip": "연도:",
+    "challendge.effects.show.label": "도전 효과 보이기",
+    "challendge.effects.toggle.desc": "도전으로 발생한 모든 효과를 보이거나 숨깁니다.",
+    "challendge.effects.hide.label": "도전 효과 숨기기",
+    "challendge.effects.panel.label": "{0} 도전의 효과",
     "challendge.panel.label": "도전",
     "challendge.pending": "대기 중",
     "challendge.reclaimReserves.label": "적금 회수",
@@ -338,6 +350,7 @@
     "effectsMgr.statics.boostFromLeader.title": "지도자로 인한 강화",
     "effectsMgr.statics.breweryConsumptionRatio.title": "양조장 소비율",
     "effectsMgr.statics.broadcastTowerRatio.title": "방송탑 보너스",
+    "effectsMgr.statics.bskSattelitePenalty.title": "위성 기지 패널티",
     "effectsMgr.statics.cadBlueprintCraftRatio.title": "청사진 제작 보너스",
     "effectsMgr.statics.calcinerRatio.title": "하소로 보너스",
     "effectsMgr.statics.calcinerSteelCraftRatio.title": "강철 공장의 하소로 보너스",
@@ -360,6 +373,7 @@
     "effectsMgr.statics.crackerRatio.title": "채광선 보너스",
     "effectsMgr.statics.craftRatio.title": "제작 보너스",
     "effectsMgr.statics.cryochamberSupport.title": "크라이오챔버 지원",
+    "effectsMgr.statics.cryostationStorageBonus.title": "저온저장소 저장량 보너스",
     "effectsMgr.statics.cryostation-coalMax.title": "저온저장소 - 최대 석탄",
     "effectsMgr.statics.cryostation-ironMax.title": "저온저장소 - 최대 철",
     "effectsMgr.statics.cryostation-mineralsMax.title": "저온저장소 - 최대 광물",
@@ -408,6 +422,7 @@
     "effectsMgr.statics.harborRatio.title": "항구 선박 확장",
     "effectsMgr.statics.hashrate.title": "해시레이트",
     "effectsMgr.statics.hashrateLevel.title": "해시 레이트 레벨",
+    "effectsMgr.statics.heatEfficiency.title": "열 전달 효율",
     "effectsMgr.statics.heatMax.title": "열 한도",
     "effectsMgr.statics.heatMaxExpansion.title": "최대 열 확장",
     "effectsMgr.statics.heatPerTick.title": "열 전달",
@@ -437,6 +452,7 @@
     "effectsMgr.statics.manuscriptCost.title": "필사본 {0} 비용",
     "effectsMgr.statics.maxKittens.title": "고양이",
     "effectsMgr.statics.maxKittensRatio.title": "최대 고양이 수 비율",
+    "effectsMgr.statics.moonBaseStorageBonus.title": "달 기지 저장량 보너스",
     "effectsMgr.statics.moonOutpost-unobtainiumPerTickSpace.title": "달 전초기지 - 언옵타늄 변환",
     "effectsMgr.statics.mysticismBonus.title": "신비주의 보너스",
     "effectsMgr.statics.necrocornPerDay.pact.title": "네크로콘 소비량",
@@ -455,6 +471,7 @@
     "effectsMgr.statics.pactGlobalResourceRatio.title": "피라미드 당 창고",
     "effectsMgr.statics.pollutionRatio.title": "오염 생산량",
     "effectsMgr.statics.policyFakeBought.title": "정책 비용 1.25배",
+    "effectsMgr.statics.planetCrackerStorageBonus.title": "행성 채광선 저장량 보너스",
     "effectsMgr.statics.planetCracker-uraniumPerTickSpace.title": "행성 채광선 - 우라늄 변환",
     "effectsMgr.statics.priceRatio.title": "건물의 비용",
     "effectsMgr.statics.prodTransferBonus.title": "냥구 생산력 운송 보너스",
@@ -989,6 +1006,7 @@
     "res.effect": "효과",
     "res.effects": "효과",
     "res.netGain": "순이익",
+    "res.netGainPerDay": "하루 당 넷 델타",
     "res.notify.msg": "{0} 사용 가능 시 알림을 받습니다.",
     "res.notify.ready.title": "구매하기 위한 자원이 충분합니다.",
     "res.notify.ready": "{0} 준비 완료",
@@ -1426,6 +1444,7 @@
     "space.yarnMission.label": "얀 탐사 계획",
     "space.yarnMission.desc": "얀은 매우 온화한 기후, 바다와 산소 대기로 이루어진 클래스 M 행성입니다.",
     "stats.buildings": "지은 건물 수",
+    "stats.challenges.total": "완료한 도전",
     "stats.clicks.total": "총 클릭 횟수",
     "stats.crafts.current": "제작한 횟수",
     "stats.crafts.total": "총 제작한 횟수",
@@ -1441,6 +1460,7 @@
     "stats.time.current": "플레이한 시간",
     "stats.trades.current": "완수한 무역 횟수",
     "stats.trades.total": "총 완수한 무역 횟수",
+    "stats.transcendenceTier": "초월 단계",
     "stats.unicorns": "희생된 유니콘",
     "stats.years.total": "총 플레이 년 수",
     "tab.name.achievements": "업적",
@@ -1459,6 +1479,7 @@
     "time.AccelerateTimeBtn.tooltip.accelerated": "시간 흐름 가속",
     "time.cfu.blastFurnace.label": "시간 화로",
     "time.cfu.blastFurnace.desc": "시간열을 제어합니다. 최대 열 한도가 100 증가합니다.",
+    "time.cfu.blastFurnace.desc2": "연료를 100% 소모할 때마다 1년 뒤로 시간을 건너뜁니다.",
     "time.cfu.ressourceRetrieval.label": "자원 회수",
     "time.cfu.ressourceRetrieval.desc": "시간 결정을 연소할 때 연간 획득한 자원량의 일부를 복구합니다.",
     "time.cfu.temporalAccelerator.label": "시간 가속기",
@@ -1468,6 +1489,7 @@
     "time.cfu.temporalBattery.desc": "시간류 에너지의 용량이 25% 증가합니다.",
     "time.cfu.temporalPress.label": "시간압 프레스",
     "time.cfu.temporalPress.desc": "시간 결정을 분쇄할 때 정밀하게 조정할 수 있게 해줍니다.",
+    "time.cfu.temporalPress.desc.automation": "자동화가 맞춤 분쇄량을 조정합니다.",
     "time.cfu.temporalImpedance.label": "시간 저항",
     "time.cfu.temporalImpedance.desc": "어두운 미래의 시간 패널티 효과를 1000년 지연시킵니다.",
     "time.cfu.timeBoiler.label": "시간 보일러",
@@ -1561,6 +1583,7 @@
     "trade.correct.bcoin": "거대한 암호 시장 정리가 있었습니다",
     "trade.embassy.label": "대사관",
     "trade.embassy.desc": "대사관을 설립하여 외교 관계를 개선합니다.",
+    "trade.embassy.chance": "자원 획득 확률",
     "trade.embassy.pinned": "고정",
     "trade.embassy.unpinned": "고정 해제됨",
     "turnHGOff.confirmation.msg": "정말 이번 런에서부터 신성한 학살을 끄시겠습니까?",
