--- a/res/i18n/crowdin/no.json
+++ b/res/i18n/crowdin/no.json
@@ -266,6 +266,7 @@
     "effectsMgr.statics.environmentHappinessBonus.title": "Lykkebonus",
     "effectsMgr.statics.environmentMineralBonus.title": "Mineralproduksjon",
     "effectsMgr.statics.environmentWoodBonus.title": "Treproduksjon",
+    "effectsMgr.statics.expansionismUnobtainiumProductionBonus.title": "Umulium-produksjonsbonus",
     "effectsMgr.statics.factoryRefineRatio.title": "Fabrikkproduksjonsbonus",
     "effectsMgr.statics.faithRatioReligion.title": "Trusbonus",
     "effectsMgr.statics.globalResourceRatio.title": "Maksimal resursbonus",
@@ -287,10 +288,14 @@
     "effectsMgr.statics.oilReductionRatio.title": "Minkar oljeforbruket",
     "effectsMgr.statics.oilWellRatio.title": "Oljebonus",
     "effectsMgr.statics.priceRatio.title": "Byggekostnadar",
+    "effectsMgr.statics.productionRatio.title": "Produksjonsbonus",
     "effectsMgr.statics.relicPerDay.title": "Relikvieproduksjon",
     "effectsMgr.statics.sattelite-observatoryRatio.title": "Satellite - Observatory's science ratio",
     "effectsMgr.statics.sattelite-starchartPerTickBaseSpace.title": "Satellitt - Stjernekart produksjon",
     "effectsMgr.statics.smelterRatio.title": "Smelteomnsbonus",
+    "effectsMgr.statics.solarRevolutionRatio.title": "Produksjonsbonus",
+    "effectsMgr.statics.pyramidGlobalResourceRatio.title": "Lagring",
+    "effectsMgr.statics.pyramidFaithRatio.title": "Trusbonus",
     "effectsMgr.statics.t1CraftRatio.title": "Ingeniørklasse 1",
     "effectsMgr.statics.t2CraftRatio.title": "Ingeniørklasse 2",
     "effectsMgr.statics.t3CraftRatio.title": "Ingeniørklasse 3",
@@ -360,6 +365,8 @@
     "opts.theme.school": "Tavle",
     "opts.theme.sleek": "Snygg",
     "opts.theme.wood": "Tre",
+    "opts.theme.classic": "Klassisk",
+    "opts.theme.inverted": "Vrengt",
     "opts.yes": "Ja",
     "opts.no": "Nei",
     "opts.notation.si": "Klassisk",
@@ -368,6 +375,7 @@
     "policy.clearSkies.label": "Klår himmel",
     "policy.terraformingInsight.label": "Romekspansjonisme",
     "policy.communism.label": "Kommunisme",
+    "policy.diplomacy.label": "Diplomati",
     "policy.environmentalism.label": "Miljøvern",
     "policy.isolationism.label": "Isolasjonisme",
     "policy.monarchy.label": "Monarki",
@@ -388,7 +396,6 @@
     "prestige.btn.burnParagon.desc": "Mist alle paragonpoenga dine",
     "prestige.carnivals.label": "Karneval",
     "prestige.chesed.desc": "Betrar paragoneffect- og skalering med 5%",
-    "prestige.chokhmah.label": "Chokhmah",
     "prestige.chokhmah.desc": "Betrar paragoneffect- og skalering med 5%",
     "prestige.chronomancy.desc": "Meteor og stjernebegivenheter vil foregå oftere.",
     "prestige.codexAgrum.desc": "Betrar byggjeplanproduksjon med 25%.",
@@ -426,6 +433,7 @@
     "prestige.zebraDiplomacy.label": "Sebradiplomati",
     "prestige.zebraDiplomacy.desc": "Nokre sebrajegarar blir att i byen din. (Du må ha sebrajegaroppgraderinga fyrst).",
     "religion.btn.sacrifice": "Offer",
+    "religion.btn.refine": "Raffiner",
     "religion.faithCount.bonus": "bonus",
     "religion.faithCount.pool": "Samla tru: {0}",
     "religion.msg.corruption": "Your alicorn was corrupted by the markers!",
@@ -462,6 +470,7 @@
     "religion.ru.transcendence.desc": "Løser opp flere relgiøse oppgraderinger",
     "religion.sacrificeBtn.all": "alle",
     "religion.sacrificeBtn.label": "Offer einhjørningar",
+    "religion.transcend.confirmation.title": "Stig opp?",
     "religion.transcend.msg.failure": "Eit steg nærare: {0}%",
     "religion.transcend.msg.success": "Du har stige opp frå dei døydelege. T-nivå: {0}",
     "religion.transcendBtn.label": "Stig opp",
@@ -498,19 +507,22 @@
     "religion.zu.unicornTomb.desc": "Aukar einhjørningsproduksjonen med 5%",
     "religion.zu.unicornUtopia.label": "Einhjørningsparadis",
     "religion.zu.unicornUtopia.desc": "Aukar einhjørningsproduksjonen med 250%. Increase alicorn summon chance. Improves TC refine ratio by 5%",
-    "unit.watt": "Wt",
     "unit.s": "s",
     "unit.day": "dag",
     "unit.year": "år",
+    "unit.y": "å",
     "res.stack.buildings": "Bygningar",
     "res.stack.corruptionPerDayProduction": "Korrupsjon produksjon",
     "res.stack.policy": "Politikk",
     "res.stack.faith": "Tru",
+    "res.stack.solarRevolution": "Solomløp",
     "res.stack.mysticism": "Mystikk",
-    "res.stack.paragon": "Paragon",
+    "res.stack.production": "Produksjon",
     "res.stack.reactors": "Reaktorar",
     "res.stack.religion": "Religion",
+    "res.stack.steamworks": "Dampmaskin",
     "res.stack.time": "Tid",
+    "res.stack.upgrades": "Oppgraderingar",
     "res.stack.weather": "Vêr",
     "res.toCap": "Å begrense til øverste antall",
     "resources.alicorn.title": "pegasus",
@@ -587,6 +599,7 @@
     "science.archery.label": "Bogeskyting",
     "science.archery.desc": "Avstandsvåpen kjend som 'Boge'.",
     "science.archery.effectDesc": "Gjer jegarar tilgjengelege",
+    "science.archery.flavor": "TBD",
     "science.architecture.label": "Arkitektur",
     "science.architecture.effectDesc": "Gjer Myntverk og Villa tilgjengeleg.",
     "science.architecture.flavor": "Større, betre kattetårn!",
@@ -622,6 +635,7 @@
     "science.exogeology.label": "Exogeologi",
     "science.exogeophysics.label": "Eksofysikk",
     "science.genetics.label": "Genetikk",
+    "science.hydroponics.label": "Hydroponisk dyrkning",
     "science.machinery.label": "Maskineri",
     "science.machinery.effectDesc": "Gjer dampmaskinar, armbrøst, trykkpresser og fabrikkautomatikk tilgjengeleg.",
     "science.math.label": "Matematikk",
@@ -644,6 +658,7 @@
     "science.nuclearFission.effectDesc": "Gjer kjernereaktorar og reaktorfartyg tilgjengelege",
     "science.oilProcessing.label": "Olje foreidling",
     "science.paradoxalKnowledge.label": "Paradoksvitskap",
+    "science.paradoxalKnowledge.desc": "TBD",
     "science.particlePhysics.label": "Partikkelfysikk",
     "science.philosophy.label": "Filosofi",
     "science.philosophy.desc": "Filosofi er den fyrste abstrakte vitskapen laga av kattene. Filosofi er grunnlager for spirituelle og kulturelle framsteg.",
@@ -651,6 +666,8 @@
     "science.philosophy.flavor": "Eg purrar, difor er eg",
     "science.physics.label": "Fysikk",
     "science.physics.desc": "Fysikk er studiet av naturlovene. Gjer for det meste maskinene dine meir effektive.",
+    "science.quantumCryptography.desc": "TBD",
+    "science.quantumCryptography.effectDesc": "TBD",
     "science.robotics.label": "Robotikk",
     "science.robotics.desc": "Robotikk forbetrar automatiske maskinar til dømes som masomnar",
     "science.rocketry.label": "Rakettar",
@@ -683,6 +700,7 @@
     "space.centaurusSystemMission.desc": "Kentaursystemet er eit varmt fjerntliggjande solsystem.",
     "space.duneMission.label": "Dyne-ferd",
     "space.duneMission.desc": "Dyne er ein stor og livlaus planet dekkja av sand og vulkansk stein.",
+    "space.furthestRingMission.label": "Ytterste ring",
     "space.furthestRingMission.desc": "Slutten av universet.",
     "space.heliosMission.label": "Helios-ferd",
     "space.heliosMission.desc": "Helios er ei G2V stjerne i midten av Kat-systemet.",
@@ -743,7 +761,9 @@
     "stats.trades.total": "Fullførte handlar",
     "stats.unicorns": "Einhjørningar offra",
     "stats.years.total": "Totalt antal år",
+    "tab.name.challenges": "Utfordringer",
     "tab.name.religion": "Religion",
+    "tab.name.science": "Vitskap",
     "tab.name.stats": "Statistikk",
     "tab.name.time": "Tid",
     "tab.name.trade": "Handel",
@@ -751,6 +771,7 @@
     "time.AccelerateTimeBtn.desc": "Accelerate and slow time at your whim (+50% acceleration)",
     "time.cfu.temporalImpedance.desc": "Suppress effect of Dark Future temporal penalty by 1000 years.",
     "time.cfu.timeBoiler.label": "Tidskokar",
+    "time.fixCryochambers.label": "Fiks Kryokammer",
     "time.heat": "Varme",
     "time.reset.title": "Nullstill",
     "time.vsu.cryochambers.label": "Cryochambers",
@@ -764,12 +785,17 @@
     "trade.race.lizards": "Øgler",
     "trade.race.nagas": "Nagaer",
     "trade.race.sharks": "Haiar",
+    "trade.leviathans.energy": "Energi: ",
     "trade.send.caravan.desc": "Trade some of your stuff for the offered resources. Price may vary from season to season.\nYou also have a small chance of getting rare resources.",
     "trade.buys": "Kjøper",
     "trade.sells": "Selger",
     "trade.bcoin.sell.msg": "Du fikk {0} relikviar",
+    "ui.filter.all": "Alle",
+    "ui.kgnet.save.save": "Lagra",
     "ui.save.tooltip": "Lagra!",
+    "ui.energy.tooltip": "Energi",
     "ui.log.link": "Logg",
+    "ui.clear.log": "Tøm logg",
     "ui.log.filters.block": "[<span id=\"filterIcon\">+</span>] Loggfilter",
     "ui.undo": "angra ({0}s)",
     "ui.close": "lukk",
@@ -779,15 +805,25 @@
     "ui.option.highlight.unavailable": "Fremhev bygninger begrenset av lagringsplass",
     "ui.option.hide.downgrade": "Gjem nedgraderingsknapper",
     "ui.option.more": "Meir..",
-    "ui.option.import.button": "Import",
+    "ui.option.export.button": "Eksporter",
+    "ui.option.import.button": "Importer",
+    "ui.option.export": "Eksporter til:",
     "ui.option.export.dropbox": "Dropbox (Beta)",
+    "ui.option.export.text": "Teksteksport:",
     "ui.option.close.button": "Lukk",
     "ui.option.import.from": "Importer frå:",
+    "ui.option.import.from.dropbox": "Dropbox (Beta)",
+    "ui.option.import.from.text": "Tekstimport:",
+    "ui.option.do.import.button": "Importer",
     "left.resources": "ressursar",
     "left.resources.tip": "Ctrl+click ressurs for å skjule den, bruk tannhjul ikon for flere instillinger.",
     "left.font.inc": "font+",
     "left.font.dec": "font-",
+    "left.hunt": "Send jegarar",
+    "left.hunt.time": "tid",
     "left.praise": "Pris sola!",
+    "console.filter.trade": "Handel",
+    "console.filter.workshopAutomation": "Verkstadautomatisering",
     "console.filter.faith": "Tru",
     "village.bonus.desc.engineer": "Omdanningsbonus",
     "village.bonus.desc.manager": "Jaktbonus",
@@ -817,7 +853,10 @@
     "village.census.trait.none": "heilt vanleg :< ",
     "village.festival.msg.start": "Kulturfestivalen har starta",
     "village.festival.msg.ext": "Kulturfestivalen er forlenga",
+    "village.freeKittens": "Ledige katter",
     "village.general.free.kittens.label": "Ledige katter",
+    "village.happiness.buildings": "Bygningar",
+    "village.happiness.challenges": "Utfordringer",
     "village.job.bonus": "Jobbonus",
     "village.job.engineer": "Ingeniør",
     "village.job.engineer.desc": "Ein ingeniør kan opperera ein fabrikk for å automatisera produksjon.<br />Gje ingeniørane dine ein jobb i verkstadfana, dei vil fullføra ein jobb i snitt kvart 10 minutt.",
@@ -863,6 +902,7 @@
     "village.skill.novice": "nybyrjar",
     "village.skill.proficient": "profesjonell",
     "village.skill.skilled": "flink",
+    "village.tab.clear.job.confirmation.msg": "Er du sikker?",
     "village.tab.title.city": "By",
     "village.tab.title.civilisation": "Sivilisasjon",
     "village.tab.title.consortium": "Høgsteråd",
@@ -892,6 +932,7 @@
     "village.trait.scientist": "Vitskapsmann",
     "village.trait.wise": "Tenkjar",
     "void.spaceCathedral.label": "Verdsromkatedral",
+    "void.spaceCathedral.desc": "TBD.",
     "wipe.confirmation.msg2": "Er du HEILT sikker?",
     "res.per.day": "dag",
     "res.per.year": "år",
@@ -900,7 +941,6 @@
     "effectsMgr.heatPerTick.title": "Kjøling",
     "village.label.na": "N/A",
     "village.name.Angel": "Engel",
-    "village.name.Oreo": "Oreo",
     "village.name.Mittens": "Votter",
     "village.name.Amber": "Rav",
     "village.name.Theo": "Teo",
@@ -909,6 +949,7 @@
     "village.surname.Paws": "Pote",
     "village.surname.Shadow": "Skugge",
     "eta.year": "å",
+    "eta.sec": "s",
     "workshop.upgradePanel.label": "Oppgraderingar",
     "workshop.all.upgrades.unlocked": "Alle oppgraderingar fullført!",
     "workshop.toggleResearched.label": "Gøym fullførte oppgraderinger",
@@ -947,7 +988,6 @@
     "workshop.celestialMechanics.label": "Himmelmekanikk",
     "workshop.chronoEngineers.label": "Tidsingeniørar",
     "workshop.chronoEngineers.desc": "Gjer ingeniørar meir effektiv",
-    "workshop.chronoforge.label": "Chronoforge",
     "workshop.coalFurnace.label": "Kolomn",
     "workshop.coldFusion.label": "Kald fusjon",
     "workshop.coldFusion.desc": "Aukar kraftproduksjonen til reaktorar med 25%",
@@ -1017,6 +1057,7 @@
     "workshop.fluidizedReactors.desc": "Masomnar er dobbelt så effektive",
     "workshop.fluxCondensator.label": "Flukskondensator",
     "workshop.fuelInjectors.label": "Drivstoffdyser",
+    "workshop.fuelInjectors.desc": "Dampmaskiner treng 20% mindre kol",
     "workshop.geodesy.label": "Geodetikk",
     "workshop.geodesy.desc": "Geologar er meir effektive og kan finna gull.",
     "workshop.geodesy.flavor": "Gullsnusande katter",
@@ -1077,6 +1118,7 @@
     "workshop.reinforcedBarns.desc": "80% meir lagringsplass for tre og jarn",
     "workshop.reinforcedSaw.label": "Forsterka sag",
     "workshop.reinforcedSaw.desc": "Betrar sagbruka med 20%",
+    "workshop.reinforcedWarehouses.desc": "Varehus kan lagra 25% fleire ting",
     "workshop.relicStation.label": "Relikviestasjon",
     "workshop.rotaryKiln.label": "Roterande hammar",
     "workshop.satelliteRadio.desc": "Every satellite will boost the effect of Broadcast Towers by 0.5%",
@@ -1096,6 +1138,7 @@
     "workshop.steelSaw.desc": "Betrar sagbruka med 20%",
     "workshop.stoneBarns.label": "Større låvar",
     "workshop.stoneBarns.desc": "75% meir lagringsplass for tre og jarn",
+    "workshop.storageBunkers.desc": "Varehus kan lagra 20% fleire ting",
     "workshop.strenghtenBuild.label": "Betongsøyler",
     "workshop.strenghtenBuild.desc": "Repair barn and warehouse cracks with concrete.",
     "workshop.thoriumEngine.label": "Toriummotor",
@@ -1121,6 +1164,7 @@
     "workshop.unobtainiumHuts.desc": "Hyttekostnad redusert med 25%",
     "workshop.unobtainiumReflectors.desc": "Improved telescope reflectors. Every observatory will give an additional 2% to Library effectiveness.",
     "workshop.unobtainiumSaw.label": "Umuliumsag",
+    "workshop.unobtainiumSaw.desc": "Betrar sagbruka med 25%",
     "workshop.voidEnergy.label": "Tomromsenergi",
     "workshop.voidReactors.label": "Tomromsreaktorar",
     "workshop.voidReactors.desc": "Forskningsfartyga dine er 4 gongar meir effektive"
