--- a/res/i18n/crowdin/sv.json
+++ b/res/i18n/crowdin/sv.json
@@ -12,6 +12,7 @@
     "achievements.youMonster.desc": "Stackars kattungar.",
     "ai.apocalypse.msg": "AI har förstört {0}% av dina resurser",
     "btn.all": "Alla",
+    "btn.all.minor": "alla",
     "btn.prevPage": "Föregående sida",
     "btn.research": "Forskning",
     "sell.all.confirmation.msg": "Är du säker att du vill sälja allt?",
@@ -43,11 +44,16 @@
     "effectsMgr.statics.energyConsumption.title": "Energiåtgång",
     "effectsMgr.statics.expansionismUnobtainiumProductionBonus.title": "Unobtainium produktionsbonus",
     "effectsMgr.statics.heatMax.title": "Max värme",
-    "effectsMgr.statics.mausoleumBonus.title": "Mausoleum ratio",
+    "effectsMgr.statics.relicPerDay.title": "Relik produktion",
     "effectsMgr.statics.solarFarmRatio.title": "Solfarmbonus",
+    "effectsMgr.statics.pyramidGlobalResourceRatio.title": "Lagring",
     "effectsMgr.type.resProduction": "{0} produktion",
+    "effectsMgr.statics.unobtainiumPolicyRatio.title": "Unobtainium produktionsbonus",
+    "effectsMgr.statics.culturePolicyRatio.title": "Kulturproduktionsbonus",
+    "kittens.craft.confirmation.title": "Är du säker?",
     "menu.close": "Stäng",
     "navbar.energy.cons.short": "Konsumption:",
+    "navbar.energy.prod.short": "Produktion:",
     "opts.theme": "Färgtema",
     "opts.theme.black": "Svart",
     "opts.theme.catnip": "Kattmynta",
@@ -60,6 +66,7 @@
     "policy.clearSkies.desc": "Kattungepsykologer är oroade över rymdspeglars påverkan av kattungars glädje. Att avvisa dem ger dig en ringa glädjeboost.",
     "policy.epicurianism.label": "Epikurism",
     "policy.liberalism.desc": "Ett fredligt och öppet samhälle. Får bättre relationer med alla handelspartners och gör att byggnader kräver mindre guld.",
+    "policy.mysticism.label": "Mystik",
     "policy.rationing.label": "Rationering",
     "policy.republic.desc": "Bättre för större samhällen. Högt främjade ledare kommer ge en liten bonus till produktionen av alla katter.",
     "policy.spaceBasedTerraforming.label": "Rymdbaserad terraformning",
@@ -72,18 +79,21 @@
     "religion.refineTCsBtn.refine.msg": "{0} tidskristaller raffinerad, {1} relik tillverkade",
     "religion.refineTearsBtn.label": "Förädla Tårar",
     "religion.refineTearsBtn.refine.msg.failure": "Inget händer",
+    "religion.sacrificeBtn.all": "alla",
     "religion.zu.ivoryCitadel.desc": "Förbättrar enhörningsgenerationen med 25%, framkallar Meteorer av elfenben",
     "unit.day": "dag",
     "res.effect": "Effekt",
     "res.stack.policy": "Politik",
     "res.stack.mysticism": "Mystik",
-    "res.stack.religion": "Religion",
     "res.toCap": "Till max",
+    "resources.catnip.title": "kattmynta",
+    "resources.craftTable.all": "alla",
     "resources.gear.title": "kugghjul",
     "resources.gold.title": "guld",
     "resources.iron.title": "järn",
     "resources.science.title": "vetenskap",
     "resources.ship.title": "skepp",
+    "resources.void.title": "tomhet",
     "science.policyToggleBlocked.label": "Göm blockerade politik",
     "science.agriculture.label": "Jordbruk",
     "science.archeology.desc": "Geologi är vetenskapen som rör studier av Cath, stenarna den består av, och processerna som förändrar dessa. Kan potentiellt förbättra din gruvindustri.",
@@ -94,12 +104,12 @@
     "science.philosophy.effectDesc": "Låser upp mallar",
     "science.physics.effectDesc": "Öppnar upp för några användbara uppgraderingar.",
     "science.sattelites.desc": "Satelliter är maskiner som permanent är i omlopp utanför planetens atmosfär",
-    "science.thorium.label": "Thorium",
+    "space.mission.name.complete": "{0} (slutförd)",
     "space.orbitalLaunch.label": "Uppskjutning till omloppsbana",
     "space.planet.dune.hydrofracturer.label": "Hydraulisk Spräckning",
     "space.planet.umbra.hrHarvester.label": "HR-skördare",
-    "space.panel.rorshach.label": "Rorschach",
     "stats.buildings": "Konstruerade Byggnader",
+    "tab.name.achievements": "Prestationer",
     "time.AccelerateTimeBtn.tooltip.normal": "Normalt tidsflöde",
     "time.reset.zebra": "Zebrajägare",
     "time.void": "Tomhet",
@@ -110,17 +120,19 @@
     "trade.msg.trade.failure": "{0} hatar dig utan anledning",
     "trade.race.dragons": "Drakar",
     "trade.sells": "Säljer",
+    "ui.filter.all": "Alla",
     "ui.loading.msg.2": "Så kattmynta",
     "ui.loading.msg.3": "Tämja enhörningar",
     "ui.loading.msg.7": "Samlingsödlor",
+    "ui.close": "stäng",
+    "ui.option.scheme": "Färgtema:",
     "ui.option.hide.downgrade": "Göm 'nedvärdera' knappar",
     "ui.option.more": "Mer..",
-    "ui.option.import.from.dropbox": "Dropbox (Beta)",
+    "ui.option.close.button": "Stäng",
     "left.craft": "skapa",
     "left.hunt.time": "tid",
     "console.filter.astronomicalEvent": "Atronomiska Händelser",
     "village.census.leader.propmote": "Befordra ({0} exp, {1} guld)",
-    "village.census.rank": "rank",
     "village.job.priest.desc": "+0.0075 tro per sekund",
     "village.job.scholar.desc": "+0.175 vetenskap per sekund",
     "village.job.woodcutter": "Timmerarbetare",
@@ -129,28 +141,28 @@
     "village.panel.management": "Ledning",
     "village.tab.clear.job.confirmation.msg": "Är du säker?",
     "village.tab.title.dominion": "Herravälde",
-    "village.tab.title.metropolis": "Metropolis",
     "village.tab.title.smallvillage": "Liten by",
     "void.spaceCathedral.label": "Rymdkattedral",
-    "void.spaceCathedral.desc": "TBD.",
+    "res.per.day": "dag",
     "effectsMgr.heatPerTick.title": "Värmedissipation",
     "village.surname.Clay": "Lera",
-    "workshop.ai.label": "AI",
+    "workshop.alloySaw.desc": "Förbättra sågverkens effektivitet med 15%",
     "workshop.amBases.label": "Baser av antimateria",
     "workshop.amFission.desc": "Ingenjörer är 25% mer effektiva i produktionen av eludium",
     "workshop.caravanserai.flavor": "Sökes: sötare kattungar",
+    "workshop.compositeBow.desc": "En förbättrad version av en pilbåge vilket ger en permanent +50% boost till kattkraft produktion",
     "workshop.craftBtn.desc.progressHandicap": "Byggnadssvårighet",
     "workshop.crafts.megalith.desc": "Ett massivt block som kan användas för att bygga enorma konstruktioner",
     "workshop.crafts.slab.desc": "En liten platta gjord av mineraler. Krävs för avancerad konstruktion.",
     "workshop.crossbow.desc": "En förbättrad version av en pilbåge vilket ger en permanent +25% boost till kattkraft produktion",
     "workshop.darkEnergy.label": "Mörk energi",
+    "workshop.factoryOptimization.desc": "Förbättra ingenjörernas effektivitet",
     "workshop.factoryRobotics.desc": "Förbättra ingenjörernas effektivitet",
     "workshop.goldOre.desc": "En liten procent av all malm kommer smältas till guld",
     "workshop.ironHoes.label": "Järnhackor",
     "workshop.longRangeSpaceships.flavor": "En ny gräns",
     "workshop.neuralNetworks.label": "Neurala nätverk",
     "workshop.nuclearSmelters.desc": "Smältugnar kan nu producera titan",
-    "workshop.oxidation.label": "Oxidation",
     "workshop.photovoltaic.desc": "Solenergi gårdar är 50% mer effektiva",
     "workshop.pyrolysis.desc": "Kolproduktion är ökad med 20%",
     "workshop.qdot.label": "Kvantprickceller",
@@ -160,11 +172,15 @@
     "workshop.satelliteRadio.label": "Satellitradio",
     "workshop.solarSatellites.desc": "Satelliter kommer nu att generera el istället för att använda det",
     "workshop.spaceEngineers.label": "Rymdingenjörer",
+    "workshop.spaceEngineers.desc": "Förbättra ingenjörernas effektivitet",
     "workshop.spiceNavigation.desc": "Låser upp navigationsrelän. Låter dig anställa kittens för att utforska rymden som en besättning",
     "workshop.steelArmor.label": "Stålrustning",
     "workshop.steelAxe.desc": "Väldigt vassa och hållbara yxor. Skogshuggare jobbar 50% mer effektivt",
     "workshop.steelPlants.label": "Stålfabriker",
+    "workshop.steelSaw.desc": "Förbättra sågverkens effektivitet med 20%",
     "workshop.stoneBarns.label": "Utbyggda lador",
     "workshop.storageBunkers.label": "Lagringsbunkrar",
+    "workshop.titaniumSaw.desc": "Förbättra sågverkens effektivitet med 15%",
+    "workshop.unobtainiumSaw.desc": "Förbättra sågverkens effektivitet med 25%",
     "workshop.zebraUpgrade.darkRevolution.label": "Mörk Revolution"
 }
