--- a/res/i18n/crowdin/tok.json
+++ b/res/i18n/crowdin/tok.json
@@ -69,6 +69,7 @@
     "buildings.group.resource": "ijo",
     "buildings.group.science": "sona",
     "buildings.group.storage": "awen",
+    "buildings.group.zebraBuildings": "soweli pimeja en walo",
     "calendar.season.autumn": "tenpo kon",
     "calendar.season.autumn.short": "kon",
     "calendar.season.spring": "tenpo seli",
@@ -94,6 +95,7 @@
     "effectsMgr.statics.mysticismBonus.title": "wawa sona nasa",
     "effectsMgr.statics.oilWellRatio.title": "wawa telo pimeja",
     "effectsMgr.statics.refineRatio.title": "sin moku soweli pali ",
+    "effectsMgr.statics.pyramidGlobalResourceRatio.title": "awen",
     "effectsMgr.statics.starchartGlobalRatio.title": "wawa linja mun",
     "effectsMgr.type.resRatio": "namako {0}",
     "craft.msg.notEnoughCatnip": "wile moku soweli mute!",
@@ -115,14 +117,19 @@
     "prestige.blackCodex.label": "lipu pimeja",
     "prestige.chronomancy.label": "nasa tenpo",
     "prestige.codexLeviathanianus.label": "lipu monsuta",
+    "religion.btn.refine": "o pali",
     "religion.panel.cryptotheology.label": "sona sewi len",
     "religion.panel.orderOfTheSun.label": "kulupu sewi suno",
     "religion.ru.solarchant.label": "kalama suno",
     "religion.sacrificeBtn.all": "ale",
     "religion.tu.blackNexus.label": "insa pimeja",
-    "unit.watt": "Wt",
+    "unit.sec": "tenpo lili",
+    "unit.s": "s",
+    "unit.m": "m",
     "unit.h": "h",
     "unit.d": "t",
+    "unit.year": "tenpo sike",
+    "unit.y": "lon",
     "res.stack.demand": "(:3) nanpa wile",
     "res.stack.reactors": "ilo suno",
     "res.stack.time": "tenpo",
@@ -135,6 +142,7 @@
     "resources.catnip.title": "moku soweli",
     "resources.compedium.title": "lipu sona lili",
     "resources.craftTable.all": "ale",
+    "resources.culture.title": "sona jan",
     "resources.eludium.title": "kiwen sona",
     "resources.kittens.title": "soweli lili",
     "resources.manpower.title": "wawa soweli",
@@ -145,6 +153,7 @@
     "resources.oil.title": "telo pimeja",
     "resources.parchment.title": "lipu lili",
     "resources.plate.title": "kiwen supa",
+    "resources.science.title": "sona",
     "resources.slab.title": "supa kiwen",
     "resources.spice.title": "namako",
     "resources.starchart.title": "lipu pi sona mun",
@@ -154,14 +163,19 @@
     "resources.void.title": "ala",
     "resources.wood.title": "kasi",
     "resources.worship.title": "sewi e sewi",
+    "resources.zebras.title": "soweli pimeja en walo",
     "science.acoustics.label": "sona kalama",
     "science.agriculture.label": "sona moku kasi",
     "science.brewery.label": "moku soweli pali",
+    "science.cryptotheology.label": "sona sewi len",
     "space.planet.piscine.researchVessel.label": "poki sona",
     "stats.trades.current": "nanpa esun",
     "stats.trades.total": "nanpa esun",
+    "tab.name.science": "sona",
+    "tab.name.space": "kon lupa",
     "tab.name.time": "tenpo",
     "tab.name.trade": "esun",
+    "tab.name.workshop": "tomo pali",
     "trade.attitude.friendly": "pona",
     "trade.attitude.hostile": "utala",
     "trade.effectiveness": "wawa esun: +{0}%",
@@ -175,11 +189,20 @@
     "trade.race.zebras": "soweli pimeja en walo",
     "trade.leviathans.energy": "wawa:",
     "trade.bcoin.buy": "o kama esun e mani pimeja",
+    "ui.filter.all": "ale",
     "ui.loading.msg.14": "pali e mani pimeja",
+    "ui.energy.tooltip": "wawa",
+    "ui.close": "o pini",
+    "ui.option.language": "toki:",
+    "ui.option.close.button": "o pini",
     "ui.option.app.ios": "iOS",
+    "left.resources": "ijo",
+    "left.craft": "o pali",
     "left.hunt.time": "tenpo",
     "console.filter.trade": "esun",
+    "console.filter.craft": "o pali",
     "village.census.lbl.happiness": "pona",
+    "village.census.lbl.leader": "jan suli",
     "village.census.rank": "nanpa",
     "village.happiness.festival": "musi",
     "village.job.farmer.desc": "o kama jo e kasi pona +5/s",
@@ -219,10 +242,6 @@
     "village.surname.Berry": "Bewi",
     "village.surname.Shadow": "Sato",
     "eta.year": "lon",
-    "eta.day": "d",
-    "eta.hour": "h",
-    "eta.min": "m",
-    "eta.sec": "s",
     "workshop.advancedRefinement.label": "moku soweli pona",
     "workshop.amReactors.label": "ilo suno pi ijo ala",
     "workshop.crafts.beam.label": "kasi pali",
